--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/1.Agent 생성 및 지침작성.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/1.Agent 생성 및 지침작성.md
@@ -1,68 +1,63 @@
-실습 - Autonomous Agent 생성
+실습 - Custom Engine Agent 생성 및 지침 작성
 ===
 
-1) [여기](https://copilotstudio.preview.microsoft.com) URL을 통해 접속 후 좌측에 있는 **만들기**를 누릅니다.
+### 1. [여기](https://copilotstudio.preview.microsoft.com) URL을 통해 접속 후 좌측에 있는 **만들기**를 누릅니다.
 ![image](https://github.com/user-attachments/assets/27577404-175d-4646-9caa-72be7e07b94d)
     > https://copilotstudio.preview.microsoft.com/
 
 <br/>
 
-2) 자연어로도 에이전트를 만들 수 있지만, 여기서는 수동으로 생성합니다. 좌측 상단의 **새 에이전트**를 누릅니다.   
-   그리고 **구성으로 건너뛰기**를 누릅니다.
-   ![image](https://github.com/user-attachments/assets/faf6c82c-b25a-4d08-86eb-fb410f23a1fa)
 
-   > 25/4/18일 기준, Copilot Studio의 AI Orchestration은 영어만 지원합니다. 하여, 여기서는 영어로 테스트합니다.
-   
-<br/>
+### 2. 자연어 기반으로 에이전트 초안 생성
+코파일럿 기능을 통해 에이전트 초안을 생성합니다.   
+이건 초안을 작성하는 부분으로, 그냥 바로 **'만들기'를 클릭**해서 직접 설정할 수 있습니다.
+<img width="1248" height="1261" alt="image" src="https://github.com/user-attachments/assets/ebe5a018-c2c1-4a0b-9fc5-b1be25928015" />
 
-3)  화면이 변경되면 아래 내용을 참고하여 **이름, 그리고 언어**를 변경하고 에이전트를 생성합니다.   
-Autonomous Agent에서 중요한 AI Orchestion 기능은 25/4/18일 기준 영어만 지원합니다. 빠른 시일내에 한국어로도 지원할 예정입니다. 
-   ![image](https://github.com/user-attachments/assets/fa77f437-a8b1-4b5c-865c-0249e8642509)
-  
-    > 언어: 영어   
-    > 이름: Contoso Low Code Autonomous Agent
 
-<br/>
 
-4) 설명, 일반 지침, 그리고 오케스트레이션 기능을 활성화 합니다. 다음은 초기 화면으로 순서대로 작업을 진행합니다.
-   ![image](https://github.com/user-attachments/assets/d54a0a6f-b01d-436a-8438-65cc82ec7595)   
+입력할 프롬프트는 아래와 같습니다.
 
-  - (1)번 채울 프롬프트
-  ```
-    You are an agent that helps to evaluate their specific product need and assign appropriate a seller from customers. 
-    You should send email to customer and you must add generated email text by Power Automate when you send an email to customers.
-  ```
+```
+사내 사이트 정보를 기반으로 질문에 답변하는 에이전트를 만들고 싶어
+```
 
-  - (2)번 채울 프롬프트
-   ```
-    You are a Low Code service Agent tasked with some first facing in early stage.
-    
-    You should follow the steps below without missing any. Once all actions are completed your work is finished.
-    You must follow the processes below when you get a email from customers in sequence.
-    
-    1. Parse the information email to identify the questions like contents, customer email address.
-    2. Extract a Product by reffering to email contents using Action.
-    3. Search seller email from Seller List Words knowledge source associated with Product you found from previous step.
-    4. Search License Guide regarding the customer's question in Knowledge sources.
-    5. Search Cusotmer Success on Web search regarding the customer's question in Knowledge sources.
-    6. Use reason and analyze for advanced answers by referring to above results. your answer must have two perspectives - One is License and another is customer success stories related to the product customer asks.
-    7. Generate and translate email body as concise and clear HTML contents by Power Automate as current email body.
-    8. Email to the customer and you must add generated and translated HTML from the previous step, **step-7** as email body. Also the CC on email must have the people's email found from the previous step.
-    
-    **IMPORTANT: YOU MUST USE THE EMAIL ADDRESS YOU FOUND WITHOUT MODIFICATION**
-   ```
+```
+네
+```
 
-  - (3) 기능을 클릭을 통해 활성화 합니다.
+```
+필요시 업무 담당자에게 메일을 통한 에스컬레이션도 가능하게끔 구현하고 싶습니다.
+사용자의 질문에 적합한 자료와 정보를 찾지 못했다면 담당자에게 문의사항을 에스컬레이션을 할 수 있습니다.
+에스컬레이션을 하시겠습니까? 라는 질문을 넣도록 합니다.
+```
 
-<br/>
+대화식 설정이 마무리가 되면 [구성] 에서 현재 설정된 에이전트 정보를 확인할 수 있습니다.
+[만들기] 버튼을 클릭하여 에이전트를 생성합니다.
+<img width="1247" height="1204" alt="image" src="https://github.com/user-attachments/assets/0f0121e0-a5f4-46c5-a15d-e0cd8becf117" />
 
-5) Copilot Studio 내에서 Deep Reasoning model을 사용하기 위해서는 간단한 설정이 필요합니다.     
-   에이전트 우측 상단의 **설정 -> 생성형 AI -> 심층 추론 모델 사용**을 활성화 합니다.
-   ![image](https://github.com/user-attachments/assets/09ce0091-9687-45a1-bbb6-3a710a7562c7)
+</br>
 
-<br/>
+### 3. 생성형 AI 오케스트레이션 기능 실행
+여기서 테스트할 기능을 활성화합니다. 오케스트레이션 측면에서 클래식 vs 생성형의 차이는 [여기](https://learn.microsoft.com/en-us/microsoft-copilot-studio/advanced-generative-actions)를 참고할 수 있습니다.
 
-6) 다음은 설정이 완성된 모습입니다.
+<img width="688" height="419" alt="image" src="https://github.com/user-attachments/assets/bf0ab9b1-9e19-4318-b035-d1909fd8d8e5" />
+
+또한 설정에서 "응답 모델" 을 변경할 수 있습니다.
+
+
+<img width="1176" height="714" alt="image" src="https://github.com/user-attachments/assets/1e6ae064-65ad-4b83-9a27-5436c2647fe2" />
+```
+2025년 8월 10일 기준, GPT-4o와 GPT-5를 이용 할 수 있습니다.
+```
+
+### 4. 참조자료에 추가적인 설명 추가
+다음과 같이 참조 자료 화면에서, 위에서 자동으로 연결된 홈페이지 URL에 조금 더 상세한 설명을 추가해 줍니다.
+![image](https://github.com/user-attachments/assets/7b0bc417-4d09-4323-b7ac-d17ccaf87798)
+
+```
+이 참조 자료는 https://www.tripadvisor.co.kr/ 웹 사이트에서 정보를 검색합니다.
+이 참조자료는 사용자가 여행 관련 문의가 들어오면, 여기서 참고하도록 합니다.
+```
 
     ![image](https://github.com/user-attachments/assets/6fd01d79-7221-4ba6-9b7f-49010c4b561f)
 
