Update 1.Agent 생성 및 지침작성.md

--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/1.Agent 생성 및 지침작성.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/1.Agent 생성 및 지침작성.md
@@ -41,25 +41,32 @@
 여기서 테스트할 기능을 활성화합니다. 오케스트레이션 측면에서 클래식 vs 생성형의 차이는 [여기](https://learn.microsoft.com/en-us/microsoft-copilot-studio/advanced-generative-actions)를 참고할 수 있습니다.
 
 <img width="688" height="419" alt="image" src="https://github.com/user-attachments/assets/bf0ab9b1-9e19-4318-b035-d1909fd8d8e5" />
-
+</br>
+</br>
 또한 설정에서 "응답 모델" 을 변경할 수 있습니다.
 
 
 <img width="1176" height="714" alt="image" src="https://github.com/user-attachments/assets/1e6ae064-65ad-4b83-9a27-5436c2647fe2" />
+</br>
+
 ```
-2025년 8월 10일 기준, GPT-4o와 GPT-5를 이용 할 수 있습니다.
+2025년 8월 10일 기준, GPT-4o 와 GPT-5 이용 가능
 ```
 
 ### 4. 참조자료에 추가적인 설명 추가
-다음과 같이 참조 자료 화면에서, 위에서 자동으로 연결된 홈페이지 URL에 조금 더 상세한 설명을 추가해 줍니다.
-![image](https://github.com/user-attachments/assets/7b0bc417-4d09-4323-b7ac-d17ccaf87798)
+다음과 같이 참조 자료 화면에서, 위에서 자동으로 연결된 홈페이지 URL에 조금 더 상세한 설명을 추가하고 저장을 합니다.
+<img width="1262" height="575" alt="image" src="https://github.com/user-attachments/assets/f9431b04-3eb9-44ea-8c62-e43e19235470" />
+
+
 
 ```
-이 참조 자료는 https://www.tripadvisor.co.kr/ 웹 사이트에서 정보를 검색합니다.
-이 참조자료는 사용자가 여행 관련 문의가 들어오면, 여기서 참고하도록 합니다.
+이 참조 자료는 LG Innotek에서 제공하는 미디어 뉴스 정보들을 종합하여 제공하는 사이트 입니다. LG Innotek과 관련된 보도자료, 뉴스, 소식등을 확인할 수 있습니다.
+LG Innotek, LG이노텍과 관련된 뉴스,공시자료 검색을 요청할 경우 이용합니다.
 ```
 
-    ![image](https://github.com/user-attachments/assets/6fd01d79-7221-4ba6-9b7f-49010c4b561f)
+<img width="1167" height="978" alt="image" src="https://github.com/user-attachments/assets/352ffe92-dd52-42dd-9aa6-1339254f9a6e" />
+
 
 ---
-짝짝짝. 에이전트를 잘 생성했습니다. 다음은 Autonomous Agent의 핵심인 트리거를 확인하러 가 봅시다.
+에이전트의 기본 지침 설정이 완료되었습니다.
+다음은 에이전트가 이용할 도구와 트리거 설정을 합니다.
