Update and rename 1.Agent 생성 및 지침작성.md to 1. Agent 생성 및 지침작성.md

--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/1. Agent 생성 및 지침작성.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/1. Agent 생성 및 지침작성.md
@@ -1,4 +1,4 @@
-실습 - Custom Engine Agent 생성 및 지침 작성
+1.Custom Engine Agent 생성 및 지침 작성
 ===
 
 ### 1. [여기](https://copilotstudio.preview.microsoft.com) URL을 통해 접속 후 좌측에 있는 **만들기**를 누릅니다.
