--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/2. 도구(커넥터) 추가.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/2. 도구(커넥터) 추가.md
@@ -1,1 +1,99 @@
+에이전트에 도구 추가
+===
+✅ Copilot Studio에서 도구(Tool)의 역할
+
+**도구(Tool)** 는 Copilot이 기본적으로 할 수 없는 기능을 확장해주는 **추가 능력**입니다.  
+쉽게 말해, **Copilot을 단순한 대화형 AI에서 ‘업무 실행형 AI’로 업그레이드하는 핵심 요소**입니다.
+
+---
+
+**1. 도구의 핵심 역할**
+|역할|설명|
+|------|---|
+|외부 서비스 연결|CRM, ERP, 데이터베이스, API 호출|
+|업무 자동화|이메일 전송, 일정 생성, 보고서 작성|
+|데이터 처리|Excel 분석, PDF 요약, 데이터 변환|
+|시스템 통합|Microsoft 365, Teams, Power Automate 연동|
+
+---
+
+**2. 왜 필요한가?**
+
+
+- Copilot은 기본적으로 **대화형 AI** → 데이터 조회나 시스템 명령 실행은 불가능  
+- **도구를 연결하면 Copilot이 실제 작업을 실행**할 수 있음  
+
+---
+
+**3. 예시로 이해하기**
+
+- **도구 없음**  
+  > “이번 주 매출 알려줘”  
+  → Copilot: “제가 직접 데이터에 접근할 수 없어요.”
+
+- **도구 연결**  
+  > “이번 주 매출 알려줘”  
+  → Copilot: (ERP API 호출) → “이번 주 매출은 **₩120,000,000**입니다.”
+
+---
+
+**4. 정리**
+
+
+✔ 도구는 **Copilot의 기능을 확장**하는 핵심  
+✔ **업무 자동화 + 데이터 연결 + 시스템 통합** 가능  
+✔ **실제 비즈니스 프로세스 실행**을 가능하게 함  
+
+---
+실습
+===
+이번 실습에서는 에이전트가 사용자를 대신하여 조회된 정보를 추가적으로 문의하기 위해 담당자에게 메일을 발송해주기 위한 작업을 할 수 있도록 메일 발송 도구를 추가해 보겠습니다.
+
+## 1. 메일 발송 도구 추가
+에이전트 설정창에서 [도구] - [+ 도구 추가] 를 선택합니다.
+<img width="1166" height="598" alt="image" src="https://github.com/user-attachments/assets/671c05ef-8a90-4001-8ed0-a70f57bf84a8" />
+
+추천 커넥터 또는 도구 검색에서 "Office 365 Outlook" 을 검색하여 선택합니다.
+<img width="1063" height="779" alt="image" src="https://github.com/user-attachments/assets/eb82dc7b-5d2b-454d-bcfb-8d27948be6f7" />
+
+이후 "메일 보내기(V2)" 액션을 선택합니다.
+<img width="1063" height="779" alt="image" src="https://github.com/user-attachments/assets/1f89de44-65f9-4b70-b4c2-8963a507d00f" />
+
+도구를 선택하면, Office 365 outlook 커넥터를 이용하기 위한 OAuth 연결 창이 뜨며,
+[새 연결 만들기]를 통해 접속한 계정의 로그인 정보를 입력후 만들기를 클릭합니다.
+<img width="1009" height="738" alt="image" src="https://github.com/user-attachments/assets/d9b5c7f9-04cc-43da-b6a0-f32af54d6b6f" />
+
+<img width="1022" height="738" alt="image" src="https://github.com/user-attachments/assets/599eb77c-27b3-4ca8-834e-47078913cd4d" />
+
+연결이 완료되면 아래 화면과 같이 연결된 계정 정보와 초록색 아이콘이 표시됩니다.
+[추가 및 구성] 을 선택하여, 메일 발송 커넥터의 상세 설정으로 이동합니다.
+<img width="1004" height="732" alt="image" src="https://github.com/user-attachments/assets/e27dc93e-d282-48dc-bcc9-a52b9bb0ddbe" />
+
+## 2. 메일 발송 커넥터 기본 설정
+다음은 Agent가 메일을 발송하기 위해 필요한 설정들을 지정합니다.
+
+가장 먼저 해야하는 작업은 **설명** 란에 이 도구가 언제, 어떻게 사용되는지를 입력합니다. 
+
+이 설명은 Agent가 도구를 선택해야할 때 참조하는 설명으로 상황이 최대한 자세하게 설명되어 있어야 정확한 지시에 맞추어 동작합니다.
+
+<img width="1181" height="460" alt="image" src="https://github.com/user-attachments/assets/af5fd88b-afb1-4832-a465-4d2040e5114e" />
+
+
+```
+사용자를 대신하여 메일을 발송해야하는 작업이 있을 경우 이용합니다.
+업무 담당자에게 에스컬레이션 메일을 전송해야할 때 이용합니다.
+```
+
+다음은 추가 세부 정보창을 열어 인증 정책을 **[제작자 제공 자격 증명]** 으로 변경합니다.
+
+기본적으로 "최종 사용자 자격 증명" 으로 선택되어 있으며, 이 경우 에이전트를 사용하는 사용자가 액션을 이용할 때 로그인 절차를 1회 거치게 되어있습니다.
+
+사용자의 권한으로 메일박스를 검색하거나, 데이터를 조회해야할 경우 그대로 유지하고
+특정 시스템에 접근이 가능한 계정이 한정되어 있을 경우(예, SAP, DB 접근 등) 
+제작자 제공 자격 증명으로 변경하여 사용자들이 로그인을 하지 않더라도 데이터 접근이 가능토록 구성합니다.
+
+<img width="801" height="336" alt="image" src="https://github.com/user-attachments/assets/3d359fd6-7af5-49c0-b1e7-99347b5e36f6" />
+
+---
+## 3. 입력 변수 설정
 
