--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/2. 도구(커넥터) 추가.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/2. 도구(커넥터) 추가.md
@@ -95,5 +95,81 @@
 <img width="801" height="336" alt="image" src="https://github.com/user-attachments/assets/3d359fd6-7af5-49c0-b1e7-99347b5e36f6" />
 
 ---
-## 3. 입력 변수 설정
+## 3. 입력 파라미터 설정
+메일 발송에 있어, 입력해야하는 파라미터 지정과 각 파라미터들의 설명을 작성합니다.
 
+|입력<br>이름|다음을 사용하여 채우기|값|
+|:---:|:---:|:---:|
+|To|AI로 동적으로 채우기|수신자 입니다. 담당자 리스트를 참고하여 관련 업무에 해당하는 사용자의 메일주소를 입력합니다. <br>메일 주소는  someone@contoso.com 형식을 따릅니다. 여러명이 있을 경우 ; 을 이용하여 구분합니다. |
+|Subject|AI로 동적으로 채우기|메일 제목입니다. [업무 문의] 문의 내용요약 형식으로 작성합니다. |
+|Body|AI로 동적으로 채우기|메일의 본문입니다. 실제 담당자에게 문의하는 내용을 정리하여 입력합니다.<br> 문의일자 및 시각, 문의자, 문의 내용등이 HTML 형식으로 입력되어야 합니다.|
+|CC|사용자 지정|User.Email|
+
+파라미터 추가는  우측의 **[입력 추가]**를 선택하야 할 수 있습니다.
+<img width="839" height="480" alt="image" src="https://github.com/user-attachments/assets/21c78018-79a4-42ab-aaa0-fc97f0a32c35" />
+
+이후 AI로 동적으로 채우기로 설정된 파라미터의 경우 **사용자 지정**을 선택하면 해당 파라미터의 설명을 입력할 수 있습니다.
+
+<img width="792" height="642" alt="image" src="https://github.com/user-attachments/assets/d42a0d11-da72-430b-b683-02af538aace7" />
+
+**사용자 지정 값**으로 설정된 파라미터의 경우, 수동으로 입력 또는 ... 을 클릭하여 시스템,환경 변수나 수식으로 입력이 가능합니다.
+이번 실습에서는 참조로 질문자의 이메일 주소를 입력할 수 있도록
+시스템 변수에서 **User.Email**을 선택합니다.
+
+마지막으로 **[완료]** 에서 해당 도구가 실행 완료되었을 때의 메세지등을 설정하면
+사용자들이 에이전트와 상담중 메일이 발송되었다는것을 보다 쉽게 알아차릴수 있습니다.
+
+실행후 액션을 **특정 응답 보내기(아래에 지정)** 으로 선택 후,
+다음 메세지를 지정합니다.
+
+<img width="846" height="397" alt="image" src="https://github.com/user-attachments/assets/fa991646-b33f-4dc1-b676-c1a85fa3fa1d" />
+
+```
+지시하신대로 해당 내용을 담당자에게 메일로 전송하였습니다.
+빠른시일내로 담당자가 따로 연락을 드리겠습니다.
+```
+<br>
+
+작업을 다 마치고 상단의 **[저장]**을 클릭하면 메일 발송 커넥터 설정이 완료됩니다.
+
+
+## 4. 에이전트 지침 수정
+메일 발송 도구 설정이 완료되었으나, 
+'사용자가 메일을 발송해줘' 라고 입력을 할 경우 도구가 선택하여 동작을 하겠지만
+담당자가 누구인지, 제목을 어떻게 해야하는지, 본문은 무엇을 입력해야하는지와 같은 상세 지침이 지정되어 있지 않습니다.
+
+따라서, 다시 **개요**로 돌아가, 추가된 도구에 대한 지침을 입력해 주도록 합니다.
+지침 수정 중 ** / ** 을 입력하면, 도구, 에이전트, 토픽을 직접 명시할 수 있습니다.
+
+<img width="972" height="707" alt="image" src="https://github.com/user-attachments/assets/3f41fb6f-62c0-482c-9d3e-109ddc49fd03" />
+
+
+```
+
+##메일 발송##
+정확한 답변을 얻지 못해 사용자가 에스컬레이션을 원하는 경우, 담당자와 직접 소통이 필요한 경우  메일 보내기(V2)  기능을 이용합니다.
+
+각 업무 담당자 연락처는 다음과 같습니다.
+- 마케팅, 보도자료,홈페이지 관리 > admin@M365CPI45255191.onmicrosoft.com
+- 기술 문의 > chiwonchoi@microsoft.com
+
+메일 본문과 제목은 아래 규칙을 따릅니다.
+제목: [마케팅 문의|보도자료 문의|홈페이지 관리 문의|기술 문의] 문의 내용 요약
+예) [보도자료 문의] 8월 10일 보도자료 오타로 인한 수정 문의 관련
+
+본문
+---
+문의 일자: UTC+9 기준으로 2025년 8월 10일 15시 10분 형식으로 입력
+문의자: 사용자의 이름을 입력합니다.
+문의 내용: 사용자가 문의한 내용을 상세하게 정리하여 입력합니다.
+---
+```
+
+지침 편집을 마치고 저장을 한 후, 테스트를 하여 메일이 정상적으로 발송되는지 확인해 봅니다.
+
+<img width="1195" height="1156" alt="image" src="https://github.com/user-attachments/assets/0459dfa8-5ae9-4bb6-b952-d89e6945e352" />
+
+<img width="580" height="614" alt="image" src="https://github.com/user-attachments/assets/59b02d08-861b-4c4a-994f-5820f7e3675e" />
+
+이로서 도구를 통해 에이전트가 추가적인 액션을 이용할 수 있게 되었습니다.
+다음은 이러한 작업들을 여러개 이어 하나의 Flow로 만들어 작업을 해보도록 합니다.
