--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/2. 도구(커넥터) 추가.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/2. 도구(커넥터) 추가.md
@@ -172,5 +172,5 @@
 <img width="580" height="614" alt="image" src="https://github.com/user-attachments/assets/59b02d08-861b-4c4a-994f-5820f7e3675e" />
 
 ---
-이로서 도구를 통해 에이전트가 추가적인 액션을 이용할 수 있게 되었습니다.
+이로서 도구를 통해 에이전트가 추가적인 액션을 이용할 수 있게 되었습니다. <br>
 다음은 이러한 작업들을 여러개 이어 하나의 Flow로 만들어 작업을 해보도록 합니다.
