--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/2. 도구(커넥터) 추가.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/2. 도구(커넥터) 추가.md
@@ -160,12 +160,8 @@
 본문
 ---
 문의 일자: UTC+9 기준으로 2025년 8월 10일 15시 10분 형식으로 입력
-문의자: variable
-System.User.DisplayName
- ( 
-variable
-System.User.PrincipalName
- ) 형식으로 입력합니다.
+문의자: "variable System.User.DisplayName" (variable System.User.PrincipalName) 형식으로 입력합니다.
+## 위 변수는 / 를 통해 시스템 변수 User.DisplayName과 User.PrincipalName 을 입력하였습니다
 문의 내용: 사용자가 문의한 내용을 상세하게 정리하여 입력합니다.
 ---
 ```
