--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/3. 도구(플로우) 추가.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/3. 도구(플로우) 추가.md
@@ -127,8 +127,51 @@ Flow 생성을 위해 **[개요]** 에서 **[+도구 추가]** -> **[+새로운 
 <img width="695" height="583" alt="image" src="https://github.com/user-attachments/assets/1ee9844e-50e0-4752-b185-da3a89fd1d08" />
 <br>
 
-작업이 완료되었으면 상단의 **게시** 버튼을 클릭하면 Flow가 게시되고 자동으로 Agent에 추가 됩니다.
+작업이 완료되었으면 상단의 **게시** 버튼을 클릭하면 Flow가 게시되고 이후 [에이전트로 돌아가]를 선택시 자동으로 Agent 개요 페이지에서 추가된 흐름을 확인할 수 있습니다.. 
 <img width="813" height="393" alt="image" src="https://github.com/user-attachments/assets/a3910866-899d-42ec-82fc-b8147b630d2e" />
+<br>
+<img width="981" height="408" alt="image" src="https://github.com/user-attachments/assets/b6fabf2c-cf60-469b-934f-b9c84f150b96" />
+
+---
+## 4. 플로우 적용
+다음은 실제로 플로우가 동작할 수 있도록, 지침과 파라미터 설명을 추가토록 하겠습니다.<br>
+
+**[도구]** 로 이동하면 앞서 생성한 Flow가 **제목 없음** 이라는 이름으로 추가가 되어있음을 확인 할 수 있습니다.
+
+다만, 현재 구성은 이전에 했던 메일 보내기 작업과 중복되는 기능이기 때문에 먼저 **도구** 에서 **메일 보내기(v2)** 작업의 토글을 비활성화 처리를 합니다.
+<img width="1258" height="379" alt="image" src="https://github.com/user-attachments/assets/69e1c73e-aaae-4a62-bb5b-9b7c22a941d4" />
+
+이후 **제목 없음** Flow로 이동하여 **메일 보내기(v2)** 에서 진행한 작업과 동일한 작업을 적용해 줍니다.
+|파라미터|값|
+|---|---|
+|이름|메일보내기 및 알림 흐름|
+|설명|사용자를 대신하여 메일을 발송해야하는 작업이 있을 경우 이용합니다. <br> 업무 담당자에게 에스컬레이션 메일을 전송해야할 때 이용합니다.|
+|To|AI로 동적으로 채우기 - 수신자 입니다. 담당자 리스트를 참고하여 관련 업무에 해당하는 사용자의 메일주소를 입력합니다. 메일 주소는  someone@contoso.com 형식을 따릅니다. 여러명이 있을 경우 ; 을 이용하여 구분합니다.|
+|Subjuect|AI로 동적으로 채우기 - 메일 제목입니다. [업무 문의] 문의 내용요약 형식으로 작성합니다.|
+|Body|AI로 동적으로 채우기 - 메일의 본문입니다. 실제 담당자에게 문의하는 내용을 정리하여 입력합니다. <br> 문의일자 및 시각, 문의자, 문의 내용등이 HTML 형식으로 입력되어야 합니다.|
+|CC|사용자 지정 값 - User.Email|
+|실행 후|특정 응답 보내기 - 지시하신대로 해당 내용을 담당자에게 메일로 전송하였습니다. <br> 빠른시일내로 담당자가 따로 연락을 드리겠습니다.|
+<br>
+<img width="1181" height="1145" alt="image" src="https://github.com/user-attachments/assets/7d09943b-5053-4853-9cae-a95ed665b2db" />
+
+<br>
+
+설정이 완료되면 **저장** 을 한 뒤 **개요** 로 이동하여 지침을 수정합니다.
+
+기존 지침은, 에스컬레이션이 될 경우 **메일 보내기(V2)** 도구를 이용하라고 설정이 되어있었기에,
+지침에서 해당 도구의 선언을 지우고, **메일 보내기 및 알림 흐름** 을 선언하고 저장을 합니다.
+
+<img width="1010" height="639" alt="image" src="https://github.com/user-attachments/assets/e56bbe69-d6e2-4bd5-b90c-280c0e7b226a" />
 
 ---
 
+테스트를 통해 실제로 플로우가 동작하는지 확인해 봅니다.
+
+<img width="1278" height="1169" alt="image" src="https://github.com/user-attachments/assets/fbcf1326-89f0-4f7b-b3d9-bf84977d0f43" />
+> 에스컬레이션을 요청
+
+<img width="1803" height="526" alt="image" src="https://github.com/user-attachments/assets/a7341ff1-eb08-4bb1-a339-3fbd029d338d" />
+> 메일로 수신
+
+<img width="633" height="705" alt="image" src="https://github.com/user-attachments/assets/c4d2c9bd-d5a3-4d38-92b2-7778793fdc4a" />
+> 동일한 내용으로 지정된 팀즈 채널에 게시물 알림
