--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/4. 트리거 추가.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/4. 트리거 추가.md
@@ -1,1 +1,31 @@
-TBD
+에이전트에 트리거 설정
+===
+
+**트리거** 는 에이전트가 특정 조건에 만족할 경우, 사용자가 프롬프트, 지시를 입력하지 않더라도 사전에 지정된 지침에 따라 자동으로 대응을 할 수 있는 자동화 에이전트를 구성하기 위한 시작 단계 입니다.
+
+트리거는 시간, 메일을 수신, 파일 업데이트 등 다양한 조건을 지정할 수 있으며
+트리거가 동작을 할 때 어떤 프롬프트와 데이터를 전달할지에 대해서도 지침과 가이드를 지정할 수 있습니다.
+
+이번 실습에서는 특정 사서함에 질문 메일이 오면, Agent가 자료를 검색하고 메일로 대신 회신을 해주는 기능을 구현해 보도록 합니다. 
+
+---
+
+## 1. 트리거 추가
+먼저 **개요**에서 트리거 추가를 선택합니다.
+<img width="940" height="273" alt="image" src="https://github.com/user-attachments/assets/34a5a414-ef4a-4545-b400-b98e671335bb" />
+<br>
+
+팝업창에는 이용할 수 있는 트리거가 표시됩니다.<br>
+**추천** 에서 **새 메일이 도착하면(v3)** 을 선택해 추가하여 로그인 정보를 입력합니다. <br>
+<img width="1184" height="1228" alt="image" src="https://github.com/user-attachments/assets/8185fdfd-4d37-484f-a663-d24556a19ca5" />
+
+로그인 정보가 입력되면, 트리거가 언제 동작할지, 어떻게 응답을 할지 지정을 하게 됩니다.<br>
+실습에서는 **받은 사서함** 에서 제목이 **[기술문의]** 라는 단어가 포함될 때 동작하도록 지정합니다.<br>
+<img width="1159" height="1187" alt="image" src="https://github.com/user-attachments/assets/28898a44-6bd5-4ed9-b91a-55f545fbac78" />
+
+> 중요! 메일을 수신하고 메일로 답변하는 자동화 에이전트를 만들다 보면
+> 수신받는 사서함 폴더, 수신자, 단어 패턴등을 잘못 지정할 경우 답변한 메일에 대해 다시 답변을 하는
+> 루핑에 빠질 수 있습니다. 이 경우 예상하지 못한 다량의 과금이 발생하니 주의가 필요합니다.
+
+다음에는 **이 트리거에 의해 호출될 때 에이전트에 대한 추가 지침** 을 입력합니다.
+이 지침은 트리거가 동작할 때, 실제 메일 정보와 Agent에게 전달될 프롬프트라고 이해해주시면 됩니다.
