--- a/[Beginner] Copilot Studio Custom Engine Agent workshop/4. 트리거 추가.md
+++ b/[Beginner] Copilot Studio Custom Engine Agent workshop/4. 트리거 추가.md
@@ -27,5 +27,12 @@
 > 수신받는 사서함 폴더, 수신자, 단어 패턴등을 잘못 지정할 경우 답변한 메일에 대해 다시 답변을 하는
 > 루핑에 빠질 수 있습니다. 이 경우 예상하지 못한 다량의 과금이 발생하니 주의가 필요합니다.
 
+<br>
+
 다음에는 **이 트리거에 의해 호출될 때 에이전트에 대한 추가 지침** 을 입력합니다.
 이 지침은 트리거가 동작할 때, 실제 메일 정보와 Agent에게 전달될 프롬프트라고 이해해주시면 됩니다.
+
+아래 지침을 입력하여 메일을 받을 때 agent가 올바르게 동작할 수 있도록 합니다.
+```
+ㅇ
+```
