Update 1. 에이전트 생성 및 지침 입력.md

--- a/커스텀엔진 에이전트 실습/1. 에이전트 생성 및 지침 입력.md
+++ b/커스텀엔진 에이전트 실습/1. 에이전트 생성 및 지침 입력.md
@@ -1,1 +1,87 @@
+# 에이전트 생성 및 지침 입력하기
+
+이번 세션에서는 [Copilot studio](https://copilotstudio.preview.microsoft.com/) 에서 실제로 에이전트를 생성하고
+기본적인 지침을 입력해 봅니다.
+
+## 1. 지침(Instruction) 이란?
+Agent에서 말하는 **지침(Instruction)** 은 Agent가 사용자 요청을 처리할 때 따라야 하는 행동 원칙과 도구 사용 규칙을 의미합니다. 이 지침은 Agent가 정확하고 안전하게 작동하도록 돕는 역할을 합니다.
+
+## 2. 지침(Instructions) 정책
+**"지침(Instructions)"** 은 다음 요소를 포함하여 지침 작성해야 합니다.
+이 요소를 모두 포함하여 작성할 경우, 더욱 정확하고 정교하게 AI Agent가 동작을 하게 됩니다.
+
+|요소|설명|예시|
+|:-:|:-:|:-:|
+|**역할**|Agent의 정체성 및 기능을 의미합니다. 어떤 역할을 수행할지 정의해야 합니다.|"당신은 고객 지원 전문가입니다."|
+|**목표**|Agent가 해결해야 하는 문제, 달성해야하는 핵심 목표를 작성합니다.|"사용자 문의에 신속하고 정확하게 답변"|
+|**톤&<br>스타일**|대화의 분위기, 말투를 지정합니다.|"친근하고 전문적인 톤 유지"|
+|**제약조건**|금지사항, 정책 준수등 Agent가 반드시 지켜야하는 규칙입니다.|"개인정보 요청 금지"|
+|**예시**|올바른 응답 샘플을 제시합니다.|Q: 배송 기간은? → A: "평균 2~3일 소요됩니다."
+
+<br>
+
+---
+## 3. 실습
+지금부터 에이전트 생성을 시작해 보도록 하겠습니다.
+
+### Custom Engine Agent 생성 하기
+
+[Copilot studio](https://copilotstudio.preview.microsoft.com/)로 접속, 우측 상단의 환경을 워크샵으로 제공된 개발 환경을 선택해 이동합니다.
+
+> **중요!! 환경 이름은 바뀔수 있습니다. 정확한 이름은 행사 담당자에게 문의해 주세요!**
+<img width="1275" height="472" alt="image" src="https://github.com/user-attachments/assets/4fb33a94-f405-4200-b27b-12aae0725140" />
+<br>
+
+환경을 변경하고 난 후, 우측 패널에 **[에이전트]** 를 선택해 이동합니다.<br> 최초 생성된 환경이라면 Microsoft 365 Copilot 이라는 Agent만 존재합니다. 이번 실습에서는 Custom Engine Agent를 생성할 것이기 때문에 **[+새 에이전트]** 를 선택 합니다.
+
+<img width="1066" height="474" alt="image" src="https://github.com/user-attachments/assets/31d00191-6182-4a34-8a31-2b07afa3e05e" />
+
+> Microsoft 365 Copilot을 선택하고, 그 안에서 Agent를 생성할 경우 **Microsoft 365 Copilot 오케스트레이션을 기반으로 동작**하는 **선언형 에이전트(Declartive Agent)** 가 생성되게 됩니다. 커스텀 엔진 에이전트와 선언형 에이전트의 차이는 별도 세션에서 다룹니다
+
+<br>
+
+**[+새 에이전트]** 를 선택하면 에이전트 생성 페이지로 이동하게 되며, **<설명>** 하단의 메세지 입력을 통해 대화형식으로 에이전트의 기본적인 설정을 할 수 있습니다.<br> **<구성>** 을 누르면 직접 입력도 가능하지만 편의를 위해 대화형식으로 에이전트 생성을 진햅합니다. <br> 아래 순서대로 에이전트와 대화를 나누며 기본적인 지침과 설명을 소개 합니다.
+
+<img width="1271" height="1303" alt="image" src="https://github.com/user-attachments/assets/f6594883-ee0c-43eb-ac6f-19d4b717d157" />
+
+
+**지침, 컨셉 설명하기**
+```
+사용자가 입력한 국가명을 바탕으로, 쉐어포인트에서 ISO 2자리 코드를 검색하고, 커넥터를 통해 해당 국가의 상세 정보를 제공하고 싶어
+```
+**에이전트 이름 설정하기**
+```
+진행시켜~
+```
+ <br> 
+
+여기까지 완료하고 우측 상단의 **[만들기]** 를 선택하면 기본적인 설정과 지침이 작성된 에이전트가 생성됩니다.
+<img width="1272" height="922" alt="image" src="https://github.com/user-attachments/assets/7cee2e97-ad55-4a5f-9e82-8fa0bac8ff30" />
+
+다음은 Agent 설정에서 기본 에이전트 설정에 대해 변경을 합니다.
+우측 상단읜 **[설정]** 을 클릭하여 Agent 설정으로 이동합니다.
+
+### 에이전트 설정
+에이전트 설정에서는 생성한 에이전트에 대해 다양한 작업을 할 수 있습니다. 
+<br> 
+**주요 설정**
+- 에이전트 언어모델 설정 (GPT4o, 4.1, 5 등)
+- 보안 정책
+- 참조 자료 범위, 파일 처리 기능
+- M365 환경에 업로드된 데이터에 대해 Semantic Index 활용 등
+
+이번 시나리오의 에이전트는 기본 학습 데이터, 웹 데이터 참조가 필요하지 않기 때문에 스크롤을 내려 다음의 설정을 활성화, 비활성화 처리 하고 스크롤을 내려 **[저장]** 을 클릭합니다.
+
+|기능|설정|
+|:-:|:-:|
+|에이전트의 모델 선택|GPT4.1 또는 4o|
+|일반 참조 자료 사용|비활성화|
+|웹의 정보 사용|비활성화|
+|의미 치계 검색을 통한 테넌트 그래프 접지|활성화(권장)|
+ <br> 
+ <img width="911" height="228" alt="image" src="https://github.com/user-attachments/assets/4c8e7c24-6b47-47f0-bff0-791136749e19" />
+<img width="907" height="566" alt="image" src="https://github.com/user-attachments/assets/47195999-3f79-47d2-899e-2442c5cf38a5" />
+
+
+ 
 
