--- a/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
+++ b/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
@@ -1,7 +1,41 @@
-# ✅ Agent에 사내 데이터(쉐어포인트) 연결하기
+# ✅ Agent에 내부 데이터 참조 시키기
 
-이번 세션에서는 Agent가 Sharepoint 사이트에 업로드된 자료들을 참조하여 답을 할 수 있도록,
-참조자료를 설정해 보도록 합니다.
+이번 세션에서는 Copilot Agent가 Sharepoint 사이트에 업로드된 자료들을 참조하여 답을 할 수 있도록, 참조자료를 설정해 보도록 합니다.
+
+## 📘 참조자료란?
+Copilot Studio에서 **참조자료(Reference)** 는 플로우 설계 시 외부 데이터를 연결하여 응답의 정확성과 유연성을 높이는 기능입니다. 이를 통해 사용자의 질문에 대해 더 풍부하고 정확한 정보를 기반으로 응답할 수 있습니다.
 
 
+## ✅ 참조자료의 주요 목적
+
+|목적|설명|
+|-|-|
+|🔍 정보 보강|외부 문서나 데이터베이스를 참조하여 더 정확한 답변 제공| 
+|📄 문서 기반 응답 | FAQ, 정책 문서, 제품 설명서 등을 기반으로 자동 응답 생성 |
+|🧠 지식 기반 연결 | 사내 위키, SharePoint, OneDrive, 웹사이트 등과 연동 가능 |
+
+---
+
+## 📂 참조 가능한 자료 유형
+
+|자료|유형설명|
+|-|-|
+|🌐 공개 웹 페이지 | 회사 홈페이지, 고객지원 페이지 등 |
+| 🗃️ SharePoint / OneDrive | 내부 문서 저장소 |
+| 📊 데이터베이스 | Azure SQL, Dataverse 등 구조화된 데이터 |
+| 🧾 3rd party 솔루션 | Salesforce, ServiceNow 등과 같은 지식 저장소 |
+|📄 Azure AI Search |이미 자체 구축한 AI Search 엔진 활용|
+
+---
+
+## ⚙️ 참조자료 활용 방식
+
+1. **플로우 내에서 참조자료 연결**
+   - 특정 질문에 대해 참조자료를 기반으로 응답 생성
+2. **질문 키워드 기반 검색**
+   - 사용자의 질문과 관련된 문서 내 키워드를 검색하여 응답
+3. **다중 참조자료 설정**
+   - 여러 문서를 동시에 참조하여 종합적인 응답 제공
+
+---
 
