--- a/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
+++ b/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
@@ -2,11 +2,11 @@
 
 이번 세션에서는 Copilot Agent가 Sharepoint 사이트에 업로드된 자료들을 참조하여 답을 할 수 있도록, 참조자료를 설정해 보도록 합니다.
 
-## 📘 참조자료란?
+## 📘 1. 참조자료란?
 Copilot Studio에서 **참조자료(Reference)** 는 플로우 설계 시 외부 데이터를 연결하여 응답의 정확성과 유연성을 높이는 기능입니다. 이를 통해 사용자의 질문에 대해 더 풍부하고 정확한 정보를 기반으로 응답할 수 있습니다.
 
 
-## ✅ 참조자료의 주요 목적
+## ✅ 2. 참조자료의 주요 목적
 
 |목적|설명|
 |-|-|
@@ -16,7 +16,7 @@ Copilot Studio에서 **참조자료(Reference)** 는 플로우 설계 시 외부
 
 ---
 
-## 📂 참조 가능한 자료 유형
+## 📂 3. 참조 가능한 자료 유형
 
 |자료|유형설명|
 |-|-|
@@ -28,7 +28,7 @@ Copilot Studio에서 **참조자료(Reference)** 는 플로우 설계 시 외부
 
 ---
 
-## ⚙️ 참조자료 활용 방식
+## ⚙️ 4. 참조자료 활용 방식
 
 1. **플로우 내에서 참조자료 연결**
    - 특정 질문에 대해 참조자료를 기반으로 응답 생성
@@ -38,4 +38,34 @@ Copilot Studio에서 **참조자료(Reference)** 는 플로우 설계 시 외부
    - 여러 문서를 동시에 참조하여 종합적인 응답 제공
 
 ---
+
+## 5. 실습
+지금부터 참조자료 연결 실습을 해 보도록 합니다. 실습은 1번 세션에서 생성한 Agent를 이용하여 진행 합니다.<br> 
+에이전트 **[개요]** 에서 스크롤을 내려 **[참조 자료]** 란에 **[+참조 자료 추가]** 를 선택합니다. <br>
+<img width="1011" height="657" alt="image" src="https://github.com/user-attachments/assets/589d0999-c260-4f59-9e1d-958415d633b1" />
+<br><br>
+
+참조 자료에 추가할 수 있는 서비스들이 표시가 됩니다.
+이번 실습에서는 Sharepoint 사이트에 저장되어있는 엑셀의 데이터를 참조할 예정이므로 **[SharePoint]** 를 선택합니다.
+
+<img width="1158" height="817" alt="image" src="https://github.com/user-attachments/assets/fd2afe41-77de-4f7b-9649-bec64f0d0967" />
+
+아래의 쉐어포인트 사이트 링크를 직접 입력하거나, 또는 찾아보기를 통해 **[국가코드정보.xlsx]** 파일을 선택합니다. <br> 
+<br> 
+쉐어포인트 주소
+```
+https://m365cpi45255191.sharepoint.com/sites/CopilotAgentPoC/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FCopilotAgentPoC%2FShared%20Documents%2F%EA%B5%AD%EA%B0%80%20%EC%A0%95%EB%B3%B4%20%EB%B6%84%EC%84%9D%20%EC%97%90%EC%9D%B4%EC%A0%84%ED%8A%B8%20%EC%9E%90%EB%A3%8C&viewid=246f247a%2D0867%2D42c9%2D8a77%2Dea3dbe51b7da
+```
+> 직접 입력시 "이 항목은 이 항목은 SharePoint 또는 OneDrive 파일에서 찾을 수 없습니다. **그래도 추가하시겠습니까?**"  <br>같은 경고문이 발생할 수 있습니다. **그래도 추가하시겠습니까?** 를 선택하여 Sharepoint 사이트를 등록합니다.
+<img width="1119" height="798" alt="image" src="https://github.com/user-attachments/assets/2bef70bb-0dc5-4f19-9cb1-fcbea62f9c73" />
+<br><br>
+
+> 찾아보기를 통해 파일을 선택할 경우
+<img width="1089" height="778" alt="image" src="https://github.com/user-attachments/assets/4cc5cb21-3ab4-4dfd-9885-d368b83d4ba9" />
+<img width="1107" height="791" alt="image" src="https://github.com/user-attachments/assets/2c544d73-e998-4900-b033-4cf4e15eeaa1" />
+<br><br>
+
+이후 참조자료의 이름과 설명을 아래와 같이 입력합니다.
+> 중요! Agent는 설명을 참조하여 참조자료의 검색과 결과물에 대해 어떻게 처리할지를 판단합니다. 지침 작성 가이드 라인과 마찬가지로 데이터 포멧, 이해 방법, 처리 방식등을 잘 설명해야 합니다.
+
 
