Update 2. 사내 데이터(쉐어포인트) 연결하기.md

--- a/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
+++ b/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
@@ -65,7 +65,42 @@ https://m365cpi45255191.sharepoint.com/sites/CopilotAgentPoC/Shared%20Documents/
 <img width="1107" height="791" alt="image" src="https://github.com/user-attachments/assets/2c544d73-e998-4900-b033-4cf4e15eeaa1" />
 <br><br>
 
-이후 참조자료의 이름과 설명을 아래와 같이 입력합니다.
-> 중요! Agent는 설명을 참조하여 참조자료의 검색과 결과물에 대해 어떻게 처리할지를 판단합니다. 지침 작성 가이드 라인과 마찬가지로 데이터 포멧, 이해 방법, 처리 방식등을 잘 설명해야 합니다.
+이후 참조자료의 이름과 설명을 아래와 같이 입력하고 **[에이전트에 추가]** 버튼을 클릭합니다.
+> **📌📌중요📌📌** **Agent는 설명을 참조하여 참조자료의 검색과 결과물에 대해 어떻게 처리할지를 판단합니다.** 지침 작성 가이드 라인과 마찬가지로 데이터 포멧, 이해 방법, 처리 방식등을 잘 설명해야 합니다.
+- 이름
+```
+국가정보
+```
+- 설명
+```
+전세계 국가에 대한 공식 코드 정보가 기술되어 있습니다.  영문 이름(country_eng_nm) 한글 이름(country_iso_alp2), 2자리 iso 기호(country_iso_alp2), 3자리 iso 기호(iso_alp3), iso 번호(iso_num) 의 정보가 있습니다.
+```
+<br><br> 
+<img width="1096" height="784" alt="image" src="https://github.com/user-attachments/assets/af0cfe2c-7316-426c-b142-0f0f854d3ddd" />
 
+개요의 **[참조 자료]** 에 국가정보가 표시되고 **[준비]** 상태로 보이면 에이전트가 설정한 Sharepoint의 데이터를 활용할 수 있음을 의미합니다.
+<br><br> 
+추가된 데이터를 적절히 답변할 수 있도록 기존 지침을 아래 내용으로 변경 합니다.
+```
+- 사용자가 입력한 국가명을 바탕으로 쉐어포인트에서 해당 국가의 ISO 코드를 검색합니다.
+- 사용자가 지정하지 않을 경우,  ISO 2자리 코드(iso_alp2) 를 검색하며, 사용자가 명시적으로 요청시에는 국가의 영어이름(country_eng_nm), 한글이름(country_nm), id, iso 3자리 코드(iso_alp3), iso 번호(iso_num) 를 제공합니다.
+- ISO 2자리 코드가 확인되면 커넥터를 통해 해당 국가의 상세 정보(인구, 면적, 수도 등)를 제공함
+- 사용자가 국가명을 잘못 입력했을 경우, 올바른 국가명을 안내하고 재입력을 요청함
+- 최신 정보 제공을 위해 항상 쉐어포인트와 커넥터를 우선적으로 활용함
+- 사용자 질문에 친절하고 명확하게 응답함
+- 민감하거나 제한된 정보는 제공하지 않음
+```
+<br> <br> 
 
+우측 상단의 [에이전트 테스트] 에서 새로고침을 하고 아래의 질문을 전송하여 정상적으로 쉐어포인트 데이터를 조회하여 답변을 하는지 확인해 봅니다.
+> **📌📌중요📌📌** 기본적으로 설정, 지침, 커넥터 수정이 이루어지고 난 후, 정상적으로 동작하는지 테스트 할 때에는 <br> 반드시 에이전트 테스트에서 새로고침을 눌러서 기존 세션을 초기화하고 진행해야 새로 적용된 정보를 확인할 수 있습니다.
+```
+미국과 일본의 국가코드는?
+```
+<img width="603" height="225" alt="image" src="https://github.com/user-attachments/assets/8d017daa-4839-417a-b691-755dd07bb783" />
+<br> <br> 
+
+프롬프트가 입력되고 에이전트가 동작하기 시작하면 좌측 패널에는 [활동 지도]를 통해 에이전트가 어떤 작업을 수행하고 있는지 알 수 있습니다. <br>
+목적이 쉐어포인트 데이터를 참조하여 답변을 하는것이기에, 에이전트 참조자료와 참조자료 원본을 [국가정보] 로 선택이 되었다면 정상적으로 동작하고 있음을 알 수 있습니다.
+<img width="1650" height="1246" alt="image" src="https://github.com/user-attachments/assets/491f5a6a-18a6-4394-8899-50f2f138c7fd" />
+> 만약 정상적으로 답변을 하지 못하고 있다면, 에이전트의 모델을 변경하시거나, 잠시후 시도해 주세요. 쉐어포인트에 데이터가 업로드된지 얼마 안되었을 경우, Semantic Index가 완료되지 않아 답변의 정확도가 떨어질 수 있습니다.
