Enhance practice section with SharePoint file usage
Added scenario for using SharePoint file in agent reference materials.

--- a/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
+++ b/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
@@ -41,7 +41,18 @@ Copilot Studio에서 **참조자료(Reference)** 는 플로우 설계 시 외부
 
 ## 5. 실습
 지금부터 참조자료 연결 실습을 해 보도록 합니다. 실습은 1번 세션에서 생성한 Agent를 이용하여 진행 합니다.<br> 
-에이전트 **[개요]** 에서 스크롤을 내려 **[참조 자료]** 란에 **[+참조 자료 추가]** 를 선택합니다. <br>
+
+실습 시나리오는 다음과 같습니다.
+- 쉐어포인트에 업로드된 국가코드정보.xlsx 파일을 Agent가 참조하여 사용자가 질문하는 국가에 대해 ISO 국가코드, 영문명, 하늘명, ISO 국가번호 등을 알려줍니다.
+> **이 정보는 다음 세션에서 진행될 외부 API서버 조회에 이용될 키워드 입니다!**
+
+> 쉐어포인트 사이트에 업로드된 파일을 열어보면 다음과 같이 업로드 되어 있습니다. <br> 
+> 해당 파일은 [실습자료](https://github.com/chichoi1991/Copilot_Agent/tree/main/%EC%BB%A4%EC%8A%A4%ED%85%80%EC%97%94%EC%A7%84%20%EC%97%90%EC%9D%B4%EC%A0%84%ED%8A%B8%20%EC%8B%A4%EC%8A%B5/%EC%8B%A4%EC%8A%B5%20%EC%9E%90%EB%A3%8C) 에서 확인 및 다운로드 할 수 있습니다.
+<img width="960" height="833" alt="image" src="https://github.com/user-attachments/assets/07625f64-33d2-4685-a422-0624d797480a" />
+
+<br> <br>
+
+먼저 에이전트 **[개요]** 에서 스크롤을 내려 **[참조 자료]** 란에 **[+참조 자료 추가]** 를 선택합니다. <br>
 <img width="1011" height="657" alt="image" src="https://github.com/user-attachments/assets/589d0999-c260-4f59-9e1d-958415d633b1" />
 <br><br>
 
