Update 2. 사내 데이터(쉐어포인트) 연결하기.md

--- a/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
+++ b/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
@@ -44,7 +44,7 @@ Copilot Studio에서 **참조자료(Reference)** 는 플로우 설계 시 외부
 
 실습 시나리오는 다음과 같습니다.
 - 쉐어포인트에 업로드된 국가코드정보.xlsx 파일을 Agent가 참조하여 사용자가 질문하는 국가에 대해 ISO 국가코드, 영문명, 하늘명, ISO 국가번호 등을 알려줍니다.
-> **이 정보는 다음 세션에서 진행될 외부 API서버 조회에 이용될 키워드 입니다!**
+> **🚨🚨이 정보는 다음 세션에서 진행될 외부 API서버 조회에 이용될 키워드 입니다.🚨🚨**
 
 > 쉐어포인트 사이트에 업로드된 파일을 열어보면 다음과 같이 업로드 되어 있습니다. <br> 
 > 해당 파일은 [실습자료](https://github.com/chichoi1991/Copilot_Agent/tree/main/%EC%BB%A4%EC%8A%A4%ED%85%80%EC%97%94%EC%A7%84%20%EC%97%90%EC%9D%B4%EC%A0%84%ED%8A%B8%20%EC%8B%A4%EC%8A%B5/%EC%8B%A4%EC%8A%B5%20%EC%9E%90%EB%A3%8C) 에서 확인 및 다운로드 할 수 있습니다.
