Update 2. 사내 데이터(쉐어포인트) 연결하기.md

--- a/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
+++ b/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
@@ -115,3 +115,9 @@ https://m365cpi45255191.sharepoint.com/sites/CopilotAgentPoC/Shared%20Documents/
 목적이 쉐어포인트 데이터를 참조하여 답변을 하는것이기에, 에이전트 참조자료와 참조자료 원본을 [국가정보] 로 선택이 되었다면 정상적으로 동작하고 있음을 알 수 있습니다.
 <img width="1650" height="1246" alt="image" src="https://github.com/user-attachments/assets/491f5a6a-18a6-4394-8899-50f2f138c7fd" />
 > 만약 정상적으로 답변을 하지 못하고 있다면, 에이전트의 모델을 변경하시거나, 잠시후 시도해 주세요. 쉐어포인트에 데이터가 업로드된지 얼마 안되었을 경우, Semantic Index가 완료되지 않아 답변의 정확도가 떨어질 수 있습니다.
+
+🎉🎉축하합니다🎉🎉
+이번 세션을 완료하였습니다.
+이제는 손쉽게 에이전트가 사내 데이터를 참조할수도록 구성하게 되었습니다.
+
+**다음 세션에서는 이 데이터를 기반으로 외부의 API서버에 데이터를 호출하고 출력하는 지침을 만들어 봅니다.**
