Update 3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md

--- a/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -1,4 +1,4 @@
-# 📡3. 커스텀 커넥터를 이용한 외부 데이터 조회
+# 📡커스텀 커넥터를 이용한 외부 데이터 조회
 
 ## 1. 커넥터(Connector)란?
 
@@ -30,38 +30,61 @@ Copilot Studio에서 **커넥터**는 외부 시스템과 통신하기 위한 **
 
 ## 3. 커넥터를 사용하는 경우
 
-사용 상황설명외부 서비스와 데이터 연동 필요예: CRM에서 고객 정보 가져오기| 자동화된 작업 흐름 필요 | 예: 이메일 수신 시 DB에 기록 |
-| Copilot이 특정 시스템의 데이터를 기반으로 응답해야 할 때 | 예: ERP 시스템의 재고 정보 기반 응답 |
+|사용 | 예제 시나리오 | 
+|-|-|
+|외부 서비스와 데이터 연동 필요| CRM에서 고객 정보 가져오기| 
+|자동화된 작업 흐름 필요 | 이메일 수신 시 DB에 기록 |
+| Copilot이 특정 시스템의 데이터를 기반으로 응답해야 할 때 | ERP 시스템의 재고 정보 기반 응답 |
 
 ## 4. 커넥터 사용의 효과
 
-효과설명🔗 시스템 간 통합다양한 SaaS 및 온프레미스 시스템과 연결 가능| ⚡ 자동화 및 생산성 향상 | 반복 작업을 자동화하여 업무 효율 증가 |
+|효과 | 설명|
+|-|-|
+|🔗 시스템 간 통합다양한 SaaS 및 온프레미스 시스템과 연결 가능| ⚡ 자동화 및 생산성 향상 | 반복 작업을 자동화하여 업무 효율 증가 |
 | 🧠 Copilot의 응답 지능 향상 | 실시간 데이터 기반으로 더 정확한 응답 생성 |
 | 🔒 보안 및 인증 관리 | OAuth2.0, API Key 등 다양한 인증 방식 지원 |
 
-## 5. 커스텀 커넥터 구성 예시
+---
+
+## 5. 실습
+
+지금부터 커스텀 커넥터를 생성하고 에이전트에 연결하는 실습을 해 보도록 하겠습니다. <br>
+
+실습 시나리오는 다음과 같습니다.
+- 사내 데이터를 통해 조회된 국가 코드를 기반으로 외교부에서 제공하는 국가 정보, 사건사고 데이터를 조회합니다. <br> 이후 출력 포멧에 맞추어 Agent가 내용을 정리하여 답변하도록 합니다.
+
+외부 API 실습에는 [공공데이터포털](https://www.data.go.kr/) 에서 제공하는 데이터를 활용합니다.<br> 공공 데이터 포털은정부에서 운영하는 공공데이터 포털입니다. 회원가입 이후 필요 데이터를 무료로 이용할 수 있습니다. <br> <br>
+
+<img width="1282" height="881" alt="image" src="https://github.com/user-attachments/assets/eae5abfc-c2f8-43e2-b667-07b8212c76e0" />
 
 
-{
-  "name": "MyERPConnector",
-  "description": "사내 ERP 시스템과 통신하는 커스텀 커넥터",
-  "host": {
-    "url": "https://api.mycompany.com/erp"
-  },
-  "authentication": {
-    "type": "OAuth2",
-    "clientId": "abc123",
-    "clientSecret": "xyz456"
-  },
-  "actions": [
-    {
-      "name": "GetInventory",
-      "method": "GET",
-      "path": "/inventory",
-      "response": {
-        "type": "application/json"
-      }
-    }
-  ]
-}
+🌟실습에 사용될 데이터 정보는 다음과 같습니다.
+1. [외교부_국가·지역별 경제현황](https://www.data.go.kr/data/15099538/openapi.do): ISO국가코드를 이용하여 국가·지역별 경제현황 정보를 조회 합니다.
+2. [외교부_국가∙지역별 사건사고 유형](https://www.data.go.kr/data/15076236/openapi.do): ISO국가코드를 이용하여 사건 사고가 발생한 국가명, 발생년도, 사건사고 유형 및 사고 내용에 대한 상세 정보를 조회합니다.
+<br>
+
+> ⚠️주의⚠️ 이번 실습에서는 편의를 위해 미리 생성된 인증키를 통해 실습을 진행합니다. <br> 이 인증키는 실습이 끝나고 이용이 불가하기 때문에 지속적으로 이용이 필요할 경우, 공공데이터포털에서 [활용신청] 을 선택하여 개별로 API 인증키를 발급받으셔야 합니다.
+<img width="1295" height="601" alt="image" src="https://github.com/user-attachments/assets/6b978583-31c0-439c-9f71-374e16c1ec78" />
+
+---
+
+그럼 지금부터 실습을 시작해 보도록 합니다. 이번 세션에서 활용할 공공데이터 포털 API 인증키 정보 입니다.
+<br> 🏆🏆**API Key 정보**🏆🏆 <br> 
+```
+🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆
+```
+
+먼저 **[도구]** 섹션에서 **[+도구 추가]** 를 클릭합니다.
+<img width="959" height="203" alt="image" src="https://github.com/user-attachments/assets/8cc797d5-dadb-4bd5-aa94-58c47d5c9334" />
+<br> <br> 
+이곳 도구 선택창에서 Agent가 사용할수 있는다양한 도구(API 커넥터)를 선택할 수 있습니다. <br> 지금은 커넥터를 제공하지 않는 시스템을 호출해야 하기때문에 커스텀 커넥터를 생성해야하며, 이를 위해 우측 중간에 **[+ 새로운 도구]** 를 선택합니다.
+<img width="1019" height="626" alt="image" src="https://github.com/user-attachments/assets/216a6315-6a16-432d-b3e2-3ce5148d4937" />
+<br> <br>
+새로운 도구 선택창에서 [사용자 지정 커넥터] 를 선택하면, [Power apps](https://make.powerapps.com/customconnectors) 창이 생성되며 리다이렉트 됩니다.
+<img width="1025" height="461" alt="image" src="https://github.com/user-attachments/assets/d50677b0-136a-4645-bc31-28af8485f7b4" />
+<br> <br>
+
+Power apps 페이지에 우측 상단의 **[+ 새 사용자 지정 커넥터]** 를 선택후, **[처음부터 만들기]** 를 선택합니다.
+<img width="1721" height="547" alt="image" src="https://github.com/user-attachments/assets/926c070c-b85d-48ed-a31d-8c2bdd9f9a5a" />
+
 
