--- a/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -87,4 +87,51 @@ Copilot Studio에서 **커넥터**는 외부 시스템과 통신하기 위한 **
 Power apps 페이지에 우측 상단의 **[+ 새 사용자 지정 커넥터]** 를 선택후, **[처음부터 만들기]** 를 선택합니다.
 <img width="1721" height="547" alt="image" src="https://github.com/user-attachments/assets/926c070c-b85d-48ed-a31d-8c2bdd9f9a5a" />
 
+다음으로 커넥터 이름을 입력하고 **[계속]** 을 선택합니다.
+> **⚠️주의⚠️ 반드시 영어로 작성해야 합니다.**
+```
+MOFA-CountryData
+```
+<img width="1486" height="765" alt="image" src="https://github.com/user-attachments/assets/3013ec84-fde6-457a-be92-a6223a44b21a" />
+<br> <br>
+
+커넥터의 일반정보에 **설명**과 **호스트**를 아래 값을 입력하고 다음 단계** [보안] **으로 이동합니다. (기준 URL을 그대로 둡니다.)
+- 설명 <br> 
+```
+ISO국가코드를 이용하여 국가·지역별 경제현황 정보를 조회 합니다.
+```
+- 호스트 <br>
+```
+apis.data.go.kr
+```
+<img width="1357" height="930" alt="image" src="https://github.com/user-attachments/assets/725792ad-f254-4a3f-b0cd-fe7c76790cc2" />
+<br> <br>
+
+보안에서는 API의 인증형식을 지정할 수 있습니다. <br>
+커넥터를 여러 사용자가 사용하고, 사용자마다 서로 다른 API키를 입력해야 하는 경우에는 **[API키]**, **[OAuth 2.0]** 등을 선택합니다. <br>
+이번 세션에서는 쿼리에 API키가 함께 포함되어 호출이 되는 구조이므로 **[인증 없음]** 을 선택하고, 다음 **[정의]** 단계에서 
+API키를 직접 입력토록 합니다.
+<img width="1218" height="374" alt="image" src="https://github.com/user-attachments/assets/75f93606-ab0c-40e2-93c2-23a75a33cb6d" />
+<br> <br>
+정의 단계에서 **[+ 새동작]** 을 클릭하여, API 호출을 정의합니다. <br>
+<img width="1291" height="925" alt="image" src="https://github.com/user-attachments/assets/95e2129c-0565-4f39-86a8-567149752864" />
+
+이후 다음 정보를 입력합니다.
+| | |
+|-|-|
+|요약|GetCountryAccidentService|
+|**설명**|국가·지역별 경제현황 정보를 제공합니다. ISO 2자리 국가코드를 이용하여 국가·지역별 경제현황 목록 조회합니다.|
+|**작업ID**|GetCountryAccidentService|
+|**표시 여부**|important|
+ <img width="1246" height="709" alt="image" src="https://github.com/user-attachments/assets/4ad38886-cec3-4c05-82b9-36e045cc8ac1" />
+<br>
+
+다음은 요청에서 **[+ 샘플에서 가져오기]** 를 선택하여 API 호출 쿼리를 지정합니다.
+<img width="723" height="155" alt="image" src="https://github.com/user-attachments/assets/1d56a006-c977-4b11-ac30-c9b274b4a858" />
+<br>
+
+```
+https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?serviceKey=480d3a4a42627d1dd841f68e92d9e6758918a7d0b0d2e1a1212eb7c491e72168&numOfRows=10&pageNo=1&cond[country_iso_alp2::EQ]=RU
+```
+
 
