--- a/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -128,10 +128,15 @@ API키를 직접 입력토록 합니다.
 
 다음은 요청에서 **[+ 샘플에서 가져오기]** 를 선택하여 API 호출 쿼리를 지정합니다.
 <img width="723" height="155" alt="image" src="https://github.com/user-attachments/assets/1d56a006-c977-4b11-ac30-c9b274b4a858" />
-<br>
 
+<br> <br>
+좌측 패널에 다음의 값을 입력하고 [가져오기] 를 선택합니다.
+- **동사**: **Get**
+- **URL**: 아래 정보를 붙여넣습니다. (헤더는 공란으로 유지합니다.)
 ```
-https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?serviceKey=480d3a4a42627d1dd841f68e92d9e6758918a7d0b0d2e1a1212eb7c491e72168&numOfRows=10&pageNo=1&cond[country_iso_alp2::EQ]=RU
+https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?serviceKey=480d3a4a42627d1dd841f68e92d9e6758918a7d0b0d2e1a1212eb7c491e72168&numOfRows=10&pageNo=1&cond[country_iso_alp2::EQ]=US
 ```
+<img width="1341" height="676" alt="image" src="https://github.com/user-attachments/assets/ab6e6b76-aaec-4977-9b8b-e1dd197c93b4" />
+<br> <br>
 
-
+다음은 쿼
