Update 3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md

--- a/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -69,7 +69,7 @@ Copilot Studio에서 **커넥터**는 외부 시스템과 통신하기 위한 **
 ---
 
 그럼 지금부터 실습을 시작해 보도록 합니다. 이번 세션에서 활용할 공공데이터 포털 API 인증키 정보 입니다.
-<br> 🏆🏆**API Key 정보**🏆🏆 <br> 
+### <br> 🏆🏆**API Key 정보**🏆🏆 <br> 
 ```
 🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆
 ```
@@ -127,6 +127,7 @@ API키를 직접 입력토록 합니다.
 <br>
 
 다음은 요청에서 **[+ 샘플에서 가져오기]** 를 선택하여 API 호출 쿼리를 지정합니다.
+이곳에서는 실제 API가 호출될 때의 URL정보를 입려하여 API Endpoint, 쿼리를 직접 선언하지 않더라도 자동으로 파싱하여 빠르게 커넥터를 생성할 수 있도록 만들어 줍니다.
 <img width="723" height="155" alt="image" src="https://github.com/user-attachments/assets/1d56a006-c977-4b11-ac30-c9b274b4a858" />
 
 <br> <br>
@@ -134,9 +135,45 @@ API키를 직접 입력토록 합니다.
 - **동사**: **Get**
 - **URL**: 아래 정보를 붙여넣습니다. (헤더는 공란으로 유지합니다.)
 ```
-https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?serviceKey=480d3a4a42627d1dd841f68e92d9e6758918a7d0b0d2e1a1212eb7c491e72168&numOfRows=10&pageNo=1&cond[country_iso_alp2::EQ]=US
+https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?serviceKey=########API Key######&numOfRows=10&pageNo=1&cond[country_iso_alp2::EQ]=US
 ```
 <img width="1341" height="676" alt="image" src="https://github.com/user-attachments/assets/ab6e6b76-aaec-4977-9b8b-e1dd197c93b4" />
 <br> <br>
 
-다음은 쿼
+다음은 Request 쿼리의 정보를 수정합니다.<br>
+해당 정보는 Copilot studio 에서 도구의 Input으로 관리할 수도 있으나, 편의를 위해 Power apps 아래와 같이 설정합니다.<br>
+> ⚠️⚠️ **별도 언급이 없는 데이터는 기본 설정,값 그대로 유지합니다.** ⚠️⚠️
+
+|쿼리|기본값|필요여부|표시여부|
+|-|-|-|-|
+|serviceKey|[API Key](https://github.com/chichoi1991/Copilot_Agent/edit/main/%EC%BB%A4%EC%8A%A4%ED%85%80%EC%97%94%EC%A7%84%20%EC%97%90%EC%9D%B4%EC%A0%84%ED%8A%B8%20%EC%8B%A4%EC%8A%B5/3.%203.%20%EC%BB%A4%EC%8A%A4%ED%85%80%20%EC%BB%A4%EB%84%A5%ED%84%B0%EB%A5%BC%20%EC%9D%B4%EC%9A%A9%ED%95%9C%20%EC%99%B8%EB%B6%80%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%A1%B0%ED%9A%8C.md#-api-key-%EC%A0%95%EB%B3%B4-)를 입력합니다.|예|Internal|
+|numOfRows|10|예|Internal|
+|PageNo|1|예|Internal|
+|cond[country_iso_alp2::EQ]|공란유지|아니요|none or important|
+<br> <br> 
+설정하려는 쿼리를 클리하면 각 쿼리의 변수 설정창으로 이동하게 됩니다. 
+<img width="845" height="759" alt="image" src="https://github.com/user-attachments/assets/327e9c67-71e1-4212-bbad-27b42cf12508" />
+<br> <br> 
+값을 모두 입력하고 상단의 [<-뒤로] 를 누르면 자동으로 저장된 채로 돌아옵니다.
+<img width="1286" height="1018" alt="image" src="https://github.com/user-attachments/assets/b0164eb1-a336-42a7-81fe-c339d6b65f06" />
+
+Request 쿼리 정보 수정을 마쳤으면, 스크롤을 내려 **Reponse** 형식을 정의 합니다. <br>
+여기서는 API를 호출하고 반환받은 정보를 샘플로 입력하여, 실제 API Response의 파라미터를 빠르게 정의할 수 있습니다.
+Response(응답) 영역에 있는 **[Default]** 를 클릭 합니다.
+<img width="873" height="246" alt="image" src="https://github.com/user-attachments/assets/23643d03-e318-400e-9a1e-0c9b46f63994" />
+<br> <br> 
+
+응답 설정에서 **[+샘플에서 가져오기]** 를 선택합니다.
+<img width="1319" height="378" alt="image" src="https://github.com/user-attachments/assets/a9970768-2d42-49cc-ac5b-5ab9bfdfd8e2" />
+<br> <br>
+
+이후 헤더는 공란을 유지하고, **[본문]** 에 아래 API 응답 샘플을 붙여넣고 **[가져오기]** 를 선택합니다.
+<img width="1359" height="674" alt="image" src="https://github.com/user-attachments/assets/e31e2f19-b3fe-45a9-a424-bbde9d1e751a" />
+<br> <br>
+
+가져오기가 완료되면 다음과 같이 본문의 Response 페이로드가 표시되며, 상단의** [<-뒤로]** 를 선택하여 본문으로 돌아옵니다.
+<img width="1341" height="789" alt="image" src="https://github.com/user-attachments/assets/1bdbd12d-9fc4-4ade-8536-c5a2981290f1" />
+<br> <br> 
+
+마지막으로 상단의 **[커넥터 만들기]** 를 선택하여 설정한 커넥터를 생성합니다.
+
