--- a/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -119,11 +119,12 @@ API키를 직접 입력토록 합니다.
 이후 다음 정보를 입력합니다.
 | | |
 |-|-|
-|요약|GetCountryAccidentService|
+|요약|GetOverviewEconomicService|
 |**설명**|국가·지역별 경제현황 정보를 제공합니다. ISO 2자리 국가코드를 이용하여 국가·지역별 경제현황 목록 조회합니다.|
-|**작업ID**|GetCountryAccidentService|
+|**작업ID**|GetOverviewEconomicService|
 |**표시 여부**|important|
- <img width="1246" height="709" alt="image" src="https://github.com/user-attachments/assets/4ad38886-cec3-4c05-82b9-36e045cc8ac1" />
+<img width="1140" height="583" alt="image" src="https://github.com/user-attachments/assets/5f622f76-f972-4646-bda7-7b47daac45f4" />
+
 <br>
 
 다음은 요청에서 **[+ 샘플에서 가져오기]** 를 선택하여 API 호출 쿼리를 지정합니다.
@@ -137,7 +138,8 @@ API키를 직접 입력토록 합니다.
 ```
 https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?serviceKey=########API Key######&numOfRows=10&pageNo=1&cond[country_iso_alp2::EQ]=US
 ```
-<img width="1341" height="676" alt="image" src="https://github.com/user-attachments/assets/ab6e6b76-aaec-4977-9b8b-e1dd197c93b4" />
+<img width="1291" height="704" alt="image" src="https://github.com/user-attachments/assets/e59b7508-c10b-4bdc-a147-4855cb12e432" />
+
 <br> <br>
 
 다음은 Request 쿼리의 정보를 수정합니다.<br>
@@ -174,6 +176,33 @@ Response(응답) 영역에 있는 **[Default]** 를 클릭 합니다.
 가져오기가 완료되면 다음과 같이 본문의 Response 페이로드가 표시되며, 상단의** [<-뒤로]** 를 선택하여 본문으로 돌아옵니다.
 <img width="1341" height="789" alt="image" src="https://github.com/user-attachments/assets/1bdbd12d-9fc4-4ade-8536-c5a2981290f1" />
 <br> <br> 
-
 마지막으로 상단의 **[커넥터 만들기]** 를 선택하여 설정한 커넥터를 생성합니다.
+<br> 
+생성이 완료되면 **5.테스트** 에서 실제로 API가 호출이 되는지 확인할 수 있습니다. <br> 
+**[연결]** 에서 **[+새연결]** 을 선택하여 새로운 커넥터 연결을 추가합니다.
+<img width="1230" height="399" alt="image" src="https://github.com/user-attachments/assets/f789e807-b913-4af2-bf87-2a83ff083838" />
+<br> 
+> 추가가 되면, 연결 페이지로 이동하게 됩니다. 다시 커스텀 커넥터로 이동을 하려면 좌측 패널에서 커스텀커넥터를 선택합니다. <br> 만약 커스텀 커넥터가 보이지 않는다면, **더보기** 를 선택, 이후 **[모두 살펴보기]** 를 클릭하여 검색으로 이동후, **[데이터]** 항목에 **[사용자 지정 커넥터]** 를 선택 또는 고정 후 선택하여 이동할 수 있습니다.
+<img width="660" height="721" alt="image" src="https://github.com/user-attachments/assets/fe7cf46b-2d25-45bd-a87e-ca876f5efb06" />
+<img width="978" height="642" alt="image" src="https://github.com/user-attachments/assets/0abce34c-c43c-41bb-a39b-1968488e7a4c" />
+
+<br> <br>
+이제 실제 API호출 테스트를 위해 사용자 지정 커넥터로 이동하여 생성하였던 MOFA-countryData 커넥터를 선택합니다.
+<img width="1176" height="680" alt="image" src="https://github.com/user-attachments/assets/d83d34ac-c3f0-4dff-b1af-3d5e0682d4e4" />
+
+<br> <br>
+다음으로 우측 상단의 [편집]을 선택한 후 [5.테스트] 를 클릭하여 이동합니다.
+<img width="1301" height="337" alt="image" src="https://github.com/user-attachments/assets/bdb3838e-b9d2-4563-9a6d-be5f64954359" />
+<br> <br> 
+
+테스트에는 방금 연결한 연결정보가 표시되고 있으며, 
+작업에는 **cond[country_iso_alp2::EQ]** 파라미터에 대한 값을 입력 받도록 되어있습니다.
+테스트를 위해 해당 값에 ```US``` 를 입력하고 **[테스트 작업]** 을 클릭합니다.
+<img width="1185" height="806" alt="image" src="https://github.com/user-attachments/assets/4cab9ba1-96ce-4e86-b2cd-1b09a47ba92e" />
+
+호출이 성공적으로 완료되면, 아래 이미지와 같이 200 응답과 함께 Body(본문)에 미국에 관련된 정보가 표시됩니다.
+<img width="976" height="767" alt="image" src="https://github.com/user-attachments/assets/d533da9b-ab1b-4474-9042-eab6f29c634e" />
+
+---
+
 
