--- a/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -46,7 +46,7 @@ Copilot Studio에서 **커넥터**는 외부 시스템과 통신하기 위한 **
 
 ---
 
-## 5. 실습
+## 5. 실습 - 커스텀 커넥터 시나리오
 
 지금부터 커스텀 커넥터를 생성하고 에이전트에 연결하는 실습을 해 보도록 하겠습니다. <br>
 
@@ -67,6 +67,7 @@ Copilot Studio에서 **커넥터**는 외부 시스템과 통신하기 위한 **
 <img width="1295" height="601" alt="image" src="https://github.com/user-attachments/assets/6b978583-31c0-439c-9f71-374e16c1ec78" />
 
 ---
+## 6. 실습 - 커스텀 커넥터 생성
 
 그럼 지금부터 실습을 시작해 보도록 합니다. 이번 세션에서 활용할 공공데이터 포털 API 인증키 정보 입니다.
 ### <br> 🏆🏆**API Key 정보**🏆🏆 <br> 
@@ -106,6 +107,8 @@ apis.data.go.kr
 ```
 <img width="1357" height="930" alt="image" src="https://github.com/user-attachments/assets/725792ad-f254-4a3f-b0cd-fe7c76790cc2" />
 <br> <br>
+
+## 7. 실습 - 보안 및 Request/Response 형식 정의
 
 보안에서는 API의 인증형식을 지정할 수 있습니다. <br>
 커넥터를 여러 사용자가 사용하고, 사용자마다 서로 다른 API키를 입력해야 하는 경우에는 **[API키]**, **[OAuth 2.0]** 등을 선택합니다. <br>
@@ -186,7 +189,10 @@ Response(응답) 영역에 있는 **[Default]** 를 클릭 합니다.
 <img width="660" height="721" alt="image" src="https://github.com/user-attachments/assets/fe7cf46b-2d25-45bd-a87e-ca876f5efb06" />
 <img width="978" height="642" alt="image" src="https://github.com/user-attachments/assets/0abce34c-c43c-41bb-a39b-1968488e7a4c" />
 
-<br> <br>
+<br> <br> 
+
+## 8. 실습 - 커넥터 동작 테스트
+
 이제 실제 API호출 테스트를 위해 사용자 지정 커넥터로 이동하여 생성하였던 MOFA-countryData 커넥터를 선택합니다.
 <img width="1176" height="680" alt="image" src="https://github.com/user-attachments/assets/d83d34ac-c3f0-4dff-b1af-3d5e0682d4e4" />
 
@@ -204,5 +210,49 @@ Response(응답) 영역에 있는 **[Default]** 를 클릭 합니다.
 <img width="976" height="767" alt="image" src="https://github.com/user-attachments/assets/d533da9b-ab1b-4474-9042-eab6f29c634e" />
 
 ---
+## 9. 실습 - 추가 커넥터 생성
 
+국가 정보를 조회하는 커넥터가 생성되었다면, 다음은 같은 커넥터에서 **[+새 동작]** 선택하여,  앞서 진행한 동일한 작업을 실행해 국가별 사건사고 현황 호출 API를 조회할 수 있도록 만듭니다.
+<img width="1298" height="628" alt="image" src="https://github.com/user-attachments/assets/1287f7ae-15b1-4775-92c3-3552a62f2980" />
+<br> 
+**일반 설정**
+| | |
+|-|-|
+|**설정 작업**|**값**|
+|요약|GetCountryAccidentService|
+|설명|국가·지역별 사건 사고 정보를 제공합니다. ISO 2자리 국가코드를 이용하여 국가·지역별 사건 사고 목록을 조회합니다.|
+|작업ID|GetCountryAccidentService|
+|표시여부|Important|
 
+**요청(Request) 정보**
+- 요청 URL
+```
+https://apis.data.go.kr/1262000/CountryAccidentService2/CountryAccidentService2
+```
+<br> 
+- 쿼리 정보
+
+|쿼리|기본값|필요여부|표시여부|
+|-|-|-|-|
+|serviceKey| [API Key](https://github.com/chichoi1991/Copilot_Agent/edit/main/%EC%BB%A4%EC%8A%A4%ED%85%80%EC%97%94%EC%A7%84%20%EC%97%90%EC%9D%B4%EC%A0%84%ED%8A%B8%20%EC%8B%A4%EC%8A%B5/3.%203.%20%EC%BB%A4%EC%8A%A4%ED%85%80%20%EC%BB%A4%EB%84%A5%ED%84%B0%EB%A5%BC%20%EC%9D%B4%EC%9A%A9%ED%95%9C%20%EC%99%B8%EB%B6%80%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%A1%B0%ED%9A%8C.md#-api-key-%EC%A0%95%EB%B3%B4-)를 입력합니다.|예|Internal|
+|returnType|Json|예|Internal|
+|numOfRows|10|예|Internal|
+|PageNo|1|예|Internal|
+|cond[country_iso_alp2::EQ]|공란유지|아니요|none or important|
+
+<br> <br>
+
+- 응답 정보
+```
+{"response":{"body":{"dataType":"JSON","items":{"item":[{"continent_cd":"30","continent_eng_nm":"Europe","continent_nm":"유럽","country_eng_nm":"Russia","country_iso_alp2":"RU","country_nm":"러시아","dang_map_download_url":"https://www.0404.go.kr/files/download/COUNTRY_39/3","flag_download_url":"https://opendata.mofa.go.kr:8444/fileDownload/images/country_images/flags/50/20220729_092800113.png","map_download_url":"https://opendata.mofa.go.kr:8444/fileDownload/images/country_images/maps/50/20220729_092800180.png","news":"\u003cdiv\u003e\r\n\u003ch3 class=\"tit\"\u003e사건ㆍ사고의 유형\u003c/h3\u003e\r\n[모스크바]\u003cbr\u003e\r\nㅇ 현지 치안 상황 : 러시아 전역의 치안은 과거에 비해 전반적으로 안정화 되었으나, 수도 모스크바 및 주요 도시를 중심으로 우리 국민 여행객 수도 늘어남에 따라 절도·분실 사건 및 강도·폭행 사건 수가 증가하고 있는 추세이오니, 여행 시 유의하시기 바랍니다.\u003cbr\u003e\u003cbr\u003e\r\n\r\n[주요사건 사고 유형 및 예방안내]\u003cbr\u003e\r\nㅇ 러시아 도로변 호객 택시정식으로 등록되지 않은 택시 이용시 바가지 요금 시비가 많으므로 Gett, Yandex taxi 등 휴대전화 어플을 사용하여 정식 인가된 택시를 이용하시기 바랍니다.\u003cbr\u003e\r\nㅇ 특히, 공항 입국장 앞(호객 기사 주의), 시내 도로변에 서 있는 택시는 탑승하지 마시고 공항 정식택시 창구 및 숙박업소등을 통해 택시를 예약하여 이용하시기 바랍니다. 또한 과다 청구를 대비하여 사전에 요금제를 확인하시기 바랍니다.\u003cbr\u003e\r\nㅇ 모스크바 및 주요도시에서 외국인을 대상으로 하는 소매치기기 범죄가 빈번하게 발생하고 있습니다. 특히 주요관광지, 기차 및 지하철내에서 현금이나 고가의 휴대폰 등을 소지한 관광객을 대상으로 한 범죄가 많으니 여행하실 때 소지품 도난·분실에 주의해 주시기 바랍니다.\u003cbr\u003e\r\n\u003cp style=\"margin-left: 25px; margin-right: 25px;\"\u003e※ 도난 및 분실사고 발생 시 현지 경찰신고 절차가 복잡할 뿐만 아니라, 피해회복 또한 어렵다는 점을 잘 인식하시어 사전 예방에 힘써 주시기 바랍니다.\u003c/p\u003e\r\nㅇ 러시아 국경수비대는 러시아에 무사증으로 입국하여 벨라루스를 여행하거나 벨라루스를 경유하여 제3국에 갔다가 러시아로 돌아온 외국인이 출국하려는 경우, 러시아에서 출국했던 기록(여권 상 출국심사인 날인)이 없다는 이유로, 벨라루스 등 제3국에서 체류하였던 기간까지 모두 합산하여 사증면제협정등에서 허용하는 체류기간을 도과한 경우 불법체류한 것으로 판단하여 출국을 제지하는 사례가 발생하고 있습니다.\u003cbr\u003e\r\n\u003cp style=\"margin-left: 25px; margin-right: 25px;\"\u003e※ 벨라루스 비자, 거주등록, 러시아~벨라루스 간 항공권, 벨라루스 출입국기록(확인스템프)등을 제시하더라도 국경수비대에서는 여권 상 출국심사인 이외의 자료를 가지고는 공식적으로 출국기록을 인정하지 않음\u003c/p\u003e\r\nㅇ 이에 벨라루스를 여행하시려는 우리 국민께서는 러시아 이외의 국가를 경유하여 출입국하실 것을 권장하며, 특히 러시아로 입국한 경우 벨라루스를 경유하여 제3국 출국 또는 국내로 귀국시에는 러시아 출국기록이 전산 등에 남아있지 않아 이후 러시아 재입국시 문제가 발생할 소지가 있으니 유의하시기 바랍니다.\u003cbr\u003e\u003cbr\u003e\r\n\r\n[블라디보스톡]\u003cbr\u003e\r\nㅇ 현지 치안 상황 : 블라디보스톡 등 러시아 극동지역의 치안은 과거에 비해 많이 안정화 되었으나 아직 여타지역에 비해 강력범죄 발생률이 높기때문에 심야시간대 외출은 (특히 여성 여행객 단독) 가급적 자제하시기 바랍니다.\u003cbr\u003e\r\nㅇ 주요사건 사고 유형\u003cbr\u003e\r\n\u003cp style=\"margin-left: 15px; margin-right: 15px;\"\u003e- 소매치기 범죄 증가 : 아르바트 거리, 해양공원, 대형마트 등 외국인 관광객 밀집지역내 소매치기 범죄 발생 증가\u003cbr\u003e\r\n- 외국인 대상 택시 요금 시비 : 길거리 호객 택시 이용 대신 막심·얀덱스 등 택시 어플 이용 권장\u003cbr\u003e\r\n- 횡단철도 내 분실, 절도, 폭행 및 성추행 등 사건 발생 빈도 증가: 열차 내 개인소지품을 철저히 확인하며, 음주 승객등과의 시비에 주의\u003c/p\u003e\u003cbr\u003e\r\n\r\n[상트페테르부르크 주요 사건사고 유형]\u003cbr\u003e\r\n♣ 소매치기 사건\u003cbr\u003e\r\nQ1. 길을 가던중에 갑자기 4명이 애워싸고 3명이 길을 막은 후 한명이 가방이나 주머니에서 물건을 훔쳐 가는 사례\u003cbr\u003e\r\nQ2. 버스나 지하철 주요관광지 탑승시 덩치가 큰 사람이 탑승 입구를 막아서고 주변에 소매치기 일당들이 몰려와 물건을 강탈하는 사례 (주요관광지 입장권판매소에서도 동일한 수법으로 도난사고 발생)\u003cbr\u003e\r\n\u003cp style=\"margin-left: 15px; margin-right: 15px;\"\u003eA. 주요 관광지 및 인파가 많은 곳을 이동시에는 항상 주변을 살피시고 본인의 주변에 이상한 사람들이 접근하는 지를 파악하시며 이동하실 것을 권장합니다.\u003c/p\u003e\r\n\u003cp style=\"margin-left: 25px; margin-right: 25px;\"\u003e- 스마트폰만 보고 다니신 다거나 이어폰을 끼고 음악에 빠져 있는 경우 소매치기범의 범행 대상이 되기 쉽습니다.\u003c/p\u003e\r\nQ3. 가방을 뒤로 메고 이동 시 소매치기들이 접근하여 가방을 열고 안에 물건을 꺼내가는 사례\u003cbr\u003e\r\n\u003cp style=\"margin-left: 15px; margin-right: 15px;\"\u003eA. 인파가 많은 곳에서는 백팩은 앞으로 메주시고, 지퍼 자물쇠 사용 혹은 지퍼를 열기 쉽지 않게 끝 쪽으로 잠그시기 바랍니다.\u003c/p\u003e\r\nQ4. 책자 판매나 사인을 유도하며 한명이 주의를 끌고 나머지 일당이 소매치기하는 사례\u003cbr\u003e\r\n\u003cp style=\"margin-left: 15px; margin-right: 15px;\"\u003eA. 관광지에서 낯선 사람들이 접근한다면 상대하지 마시고, 그 자리를 피하시기 바랍니다.\u003c/p\u003e\u003cbr\u003e\r\n\r\n\u003ch3 class=\"tit\"\u003e유의해야 할 지역\u003c/h3\u003e\r\n[철수 권고 지역]\u003cbr\u003e\r\nㅇ 체첸을 중심으로 한 북카프카스 지역(북오세티아, 잉구세티아, 다게스탄, 카바르디노 발카리아,북오세티아, 카라차예보체르케스카야, 아디게야)에서 폭탄 테러가 빈발하고 있어 우리 정부는 이 지역을 철수 권고(적색경보) 지역으로 지정하고 있습니다. 따라서 긴급한 용무 외에는 북카프카스 지역 방문을 자제하여 주시기 바라며, 부득이한 경우에는 주러시아 대사관 영사과에 여행 기간 및 연락처 등을 사전에 통보하여 주시기 바랍니다.\u003cbr\u003e\u003cbr\u003e\r\n\r\n[신변안전 유의 지역] \u003cbr\u003e\r\nㅇ 2021.1월 러시아 전역 대규모 시위, 2019.12월 모스크바 시내에서 괴한의 무차별  총격 사건,  2014.10월 체첸공화국 수도 그로즈니에서 자살폭탄테러, 2011. 1월 모스크바 도모제 도보 공항 폭탄 테러, 2010. 3월 모스크바 지하철역 연쇄 폭탄 테러  등 시내 중심부에서 시위 및  테러가 발생한 바 있습니다. 따라서 대규모 군중이 밀집한 장소나 공공장소에서는 신변안전에 각별히 유의하시기 바랍니다.\u003cbr\u003e\u003cbr\u003e\r\nㅇ 과거 사례를 살펴보면 스킨헤드 등에 의한 인종혐오 범죄가 발생하였고, 일몰시 지하철역 인근, 축구 경기장, 한적한 공원이나 거리 등은 범죄피해의 우려가 있으니 유의하시기 바라며 특히, 과거 외국인 혐오 범죄가 발생하였던 히틀러 생일(4.20), 전승 기념일(5.9), 국민 통합의 날(11.4) 등 기간에는 더욱 주의하여 주시기 바랍니다.\u003cbr\u003e\r\n\r\n[블라디보스톡 - 러시아 연해주 등 극동 지역]\r\nㅇ 독수리전망대 안전구역 밖 사진촬영 (추락사고), 겨울철 해빙기 바닷가 출입 (익사사고), 루스키 섬 트레킹 시 절벽 사진 촬영 (추락사고) 등\u003cbr\u003e\r\nㅇ 러시아 연해주 지방의 핫산 지역은 여행경보 1단계 (남색경보) 여행 유의지역(러시아·북한 국경 접경지역)으로 지정되어 운용 중에 있습니다.\u003cbr\u003e\r\n\u003cp style=\"margin-left: 25px; margin-right: 25px;\"\u003e※ 핫산등 출입제한구역의 경우 외국인은 방문 60일전 방문신청서를 지역관할 국경수비대에 제출하여 사전 허가를 받아야 합니다.\u003c/p\u003e\u003cbr\u003e\r\n\r\n[상트페테르부르크 - 주요 관광지 사건]\u003cbr\u003e\r\nQ1. 주요 관광지 방문시 동물탈 · 분장 · 비둘기 등으로 관광객들을 유인하여 사진을 찍고 난 후 터무니없는 사진 촬영비를 요구하는 사례\u003cbr\u003e\r\n\u003cp style=\"margin-left: 25px; margin-right: 25px;\"\u003e- 멀리서 다른 사진을 찍을 때도 본인들이 찍혔다고 주장하며 금품을 요구\u003c/p\u003e\r\n\u003cp style=\"margin-left: 15px; margin-right: 15px;\"\u003eA. 동물탈 · 분장 · 비둘기 등으로 관광객을 대상으로 호객행위 중인 곳에서는 되도록이면 사진촬영을 자제하시기 바랍니다.\u003c/p\u003e\r\nQ2. 택시 및 교통편(마차나 말 등) 탑승 후 터무니 없는 가격을 요구하는 사례\u003cbr\u003e\r\n\u003cp style=\"margin-left: 15px; margin-right: 15px;\"\u003eA. 택시는 공인된 앱(Yandex.Taxi, 우버, Bolt 등)을 통하여 이용하시는 것이 가격적으로도 저렴하고 안전합니다. 그리고 관광지에서 탈것을 이용할 시에는 탑승 전에 정확한 가격을 합의한 후에 탑승하시기 바랍니다.\u003c/p\u003e\r\nQ3. 노점상에서 물건 구입 후 카드 결제 시 카드를 복제하거나 또는 물건 구입 가격보다 높은 금액으로 결재하는 사례\u003cbr\u003e\r\n\u003cp style=\"margin-left: 15px; margin-right: 15px;\"\u003eA. 노점상에서는 카드 결제 대신 현금으로 구입하시는 것을 권장합니다.\u003c/p\u003e\u003c/div\u003e","wrt_dt":"2025-05-21"}]},"numOfRows":10,"pageNo":1,"totalCount":1},"header":{"resultCode":"0","resultMsg":"정상"}}}
+```
+
+작업을 완료하고 **[커넥터 업데이트]** 후 **[5.테스트]** 에서 2번째 작업 "GetCountryAccidentService" 를 선택하고 cond[country_iso_alp2::EQ]
+값에 US를 입력하여 테스트를 진행하면 다음의 결과가 나옵니다.
+<img width="1351" height="789" alt="image" src="https://github.com/user-attachments/assets/48124a42-a5f4-4f88-80f1-c098283360cf" />
+<img width="1357" height="606" alt="image" src="https://github.com/user-attachments/assets/1d792d37-1d88-43b3-94e5-ccb190e64437" />
+
+정상적으로 표시가 된다면 우측 상단의 [닫기] 를 누른후, <br> 다시 **Copilot Studio 탭**으로 이동합니다.
+<img width="1238" height="303" alt="image" src="https://github.com/user-attachments/assets/dbf948e3-d24f-42a6-8fc2-2d2a5a8d4e5d" />
+
+## 10. 실습 - 에이전트에 커스텀 커넥터 추가 및 테스트
