Update 3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md

--- a/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -126,6 +126,7 @@ API키를 직접 입력토록 합니다.
 |**설명**|국가·지역별 경제현황 정보를 제공합니다. ISO 2자리 국가코드를 이용하여 국가·지역별 경제현황 목록 조회합니다.|
 |**작업ID**|GetOverviewEconomicService|
 |**표시 여부**|important|
+
 <img width="1140" height="583" alt="image" src="https://github.com/user-attachments/assets/5f622f76-f972-4646-bda7-7b47daac45f4" />
 
 <br>
@@ -214,7 +215,8 @@ Response(응답) 영역에 있는 **[Default]** 를 클릭 합니다.
 
 국가 정보를 조회하는 커넥터가 생성되었다면, 다음은 같은 커넥터에서 **[+새 동작]** 선택하여,  앞서 진행한 동일한 작업을 실행해 국가별 사건사고 현황 호출 API를 조회할 수 있도록 만듭니다.
 <img width="1298" height="628" alt="image" src="https://github.com/user-attachments/assets/1287f7ae-15b1-4775-92c3-3552a62f2980" />
-<br> 
+<br> <br> 
+
 **일반 설정**
 | | |
 |-|-|
@@ -224,12 +226,16 @@ Response(응답) 영역에 있는 **[Default]** 를 클릭 합니다.
 |작업ID|GetCountryAccidentService|
 |표시여부|Important|
 
+<br> <br> 
+
 **요청(Request) 정보**
 - 요청 URL
 ```
 https://apis.data.go.kr/1262000/CountryAccidentService2/CountryAccidentService2
 ```
-<br> 
+
+<br> <br> 
+
 - 쿼리 정보
 
 |쿼리|기본값|필요여부|표시여부|
@@ -240,7 +246,7 @@ https://apis.data.go.kr/1262000/CountryAccidentService2/CountryAccidentService2
 |PageNo|1|예|Internal|
 |cond[country_iso_alp2::EQ]|공란유지|아니요|none or important|
 
-<br> <br>
+<br> <br> 
 
 - 응답 정보
 ```
@@ -256,3 +262,13 @@ https://apis.data.go.kr/1262000/CountryAccidentService2/CountryAccidentService2
 <img width="1238" height="303" alt="image" src="https://github.com/user-attachments/assets/dbf948e3-d24f-42a6-8fc2-2d2a5a8d4e5d" />
 
 ## 10. 실습 - 에이전트에 커스텀 커넥터 추가 및 테스트
+
+Copilot studio 페이지로 이동하면, 도구 창에서 **[새로 고침]** 을 눌러줍니다.
+<img width="1090" height="789" alt="image" src="https://github.com/user-attachments/assets/3789471a-62db-409e-8a8f-9f7091e9c566" />
+
+<br> <br> 
+
+이후 도구 검색에서 **mofa** 를 입력하여 앞서 생성한 커넥터가 검색이 되는지 검색합니다.
+> 만약 검색이 잘 되지 않을 경우, 검색 버튼을 다시한번 더 클릭해 봅니다.
+
+<img width="1067" height="413" alt="image" src="https://github.com/user-attachments/assets/f4b65d96-9c0d-4591-aeec-4ecb68f5f81b" />
