--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -356,4 +356,4 @@ iso 2자리 국가코드를 입력합니다. 예) 미국=US, 일본=JP
 ---
 
 🎉🎉축하합니다🎉🎉 이번 세션을 완료하였습니다. <br>
-다음 세션에서는 도구를 하나더 추가하고 지침을 통해 필요한 포멧으로 답변을 할 수 있도록 만들어 봅니다.
+다음 세션에서는 도구를 하나더 추가하고 지침을 통해 원하는 형식으로 답변을 할 수 있도록 만들어 봅니다.
