Update 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md

--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -1,4 +1,4 @@
-<img width="1067" height="413" alt="image" src="https://github.com/user-attachments/assets/ef887382-120f-472e-a6ff-0b7af85ba5d6" /># 📡커스텀 커넥터를 이용한 외부 데이터 조회
+# 📡커스텀 커넥터를 이용한 외부 데이터 조회
 
 ## 1. 커넥터(Connector)란?
 
