Update 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md

--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -336,7 +336,7 @@ iso 2자리 국가코드를 입력합니다. 예) 미국=US, 일본=JP
 - 최신 정보 제공을 위해 항상 쉐어포인트와 커넥터를 우선적으로 활용함
 - 사용자 질문에 친절하고 명확하게 응답함
 - 민감하거나 제한된 정보는 제공하지 않음
-- 국가 정보에 대한 요청을 할 경우, $GetOverviewEconomicService 을 이용합니다.
+- 국가 경제 정보에 대한 요청을 할 경우, $GetOverviewEconomicService 을 이용합니다.
 - 복수의 국가에 대해 분석 및 정보를 요청할 경우, $GetOverviewEconomicService 을 N번씩 반복 수행 합니다.
 ```
 <br> 
@@ -345,13 +345,93 @@ iso 2자리 국가코드를 입력합니다. 예) 미국=US, 일본=JP
 지침 수정이 변경되었으면, 실제로 쉐어포인트 데이터를 조회한 후 API를 호출하여 데이터를 조회하는지 프롬프트를 입력하여 확인해 봅니다.
 
 ```
-미국과 일본에 대해 알려줘
+미국과 일본의 경제 정보를 알려주고
+둘의 차이를 비교해줘
 ```
 
 > Agent를 통한 API 호출시 커다란 장점중 하나는, 여러번의 API호출 작업이 필요한 데이터 조회 업무도 자연어 한번으로 Agent가 스스로 연속해서 호출을 하여 데이터를 처리해 답변한다는 점 입니다. <br> 
-**미국과 일본에 대해 알려줘 -> US, JP로 API 조회를 2번한 후, 결과물을 표시**
+**미국과 일본의 경제 정보를 알려주고 -> US, JP로 API 조회를 2번한 후, 결과물을 표시** <br>
+**둘의 차이를 비교해줘 -> LLM을 통한 데이터 분석** <br>
 
-<img width="1532" height="1187" alt="image" src="https://github.com/user-attachments/assets/04c8d376-1d1b-4800-aebd-ce9dfe5701d6" />
+<img width="1524" height="1174" alt="image" src="https://github.com/user-attachments/assets/6babcb18-bd20-4358-a231-a86c66e73008" />
+
+
+---
+---
+
+테스트를 통해 정상적으로 커스텀 커넥터가 동작하는것을 확인하였다면, <br> 동일한 방식으로 **"GetCountryAccidentService"** 커넥터를 추가합니다.
+
+<img width="1062" height="365" alt="image" src="https://github.com/user-attachments/assets/23a00bf6-619d-4155-ac2e-06aa8ed25b50" />
+<br> <br> 
+
+이후 다음과 같이 도구 설정을 한 후 저장해 줍니다. 
+- 설명: 국가·지역별 사건 사고 정보를 제공합니다. ISO 2자리 국가코드를 이용하여 국가·지역별 사건 사고 목록을 조회합니다.
+- 사용할 자격 증명: 제작자 제공 자격 증명
+- 입력: cond[country_iso_alp2::EQ]
+- 값: iso 2자리 국가코드를 입력합니다. 예) 미국=US, 일본=JP
+<br> 
+<img width="1060" height="1076" alt="image" src="https://github.com/user-attachments/assets/f36fb90b-1482-49e7-89d8-c8a5d54af801" />
+
+<br> <br> 
+도구 추가 및 설정이 완료되면, **[개요]** 로 이동하여 새로 추가된 도구에 대한 지침을 작성합니다.
+
+```
+- 사용자가 입력한 국가명을 바탕으로 쉐어포인트에서 해당 국가의 ISO 코드를 검색합니다.
+- 사용자가 지정하지 않을 경우,  ISO 2자리 코드(iso_alp2) 를 검색하며, 사용자가 명시적으로 요청시에는 국가의 영어이름(country_eng_nm), 한글이름(country_nm), id, iso 3자리 코드(iso_alp3), iso 번호(iso_num) 를 제공합니다.
+- ISO 2자리 코드가 확인되면 커넥터를 통해 해당 국가의 상세 정보(인구, 면적, 수도 등)를 제공함
+- 사용자가 국가명을 잘못 입력했을 경우, 올바른 국가명을 안내하고 재입력을 요청함
+- 최신 정보 제공을 위해 항상 쉐어포인트와 커넥터를 우선적으로 활용함
+- 사용자 질문에 친절하고 명확하게 응답함
+- 민감하거나 제한된 정보는 제공하지 않음
+- 국가 경제 정보에 대한 요청을 할 경우, GetOverviewEconomicService  을 이용합니다.
+- 국가의 사건 사고 정보를 요청할 경우, GetCountryAccidentService 을 이용합니다.
+- 국가에 대한 분석을 요청할 경우, GetCountryAccidentService 과 GetOverviewEconomicService 을 2개 모두 이용하여 데이터를 조회한 후 해당 내용을 기반으로 보고서를 작성합니다.
+- 복수의 국가에 대해 분석 및 정보를 요청할 경우, GetCountryAccidentService 과 GetOverviewEconomicService 을 N번씩 반복 수행 합니다.
+
+**#사건 사고 정보 출력 형식**
+각 단락마다 마크다운과 아이콘을 활용하여 시인성을 제공합니다.
+아래 순서에 맞추어 답변 출력을 제공합니다.
+- $국가 사건·사고 정보
+- 🏳️국기: flag_download_url:  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
+- 🗺️위치: map_download_url:  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다.
+---
+- 🚨 사건·사고 현황
+- 📍 유의해야 할 지역 및 유형
+- 📝 주요 피해 사례 요약
+---
+- 🌪️ 자연 재해
+---
+- 🗺️ 위험지도: dang_map_download_url: <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
+
+**#국가 분석 내용 출력 형식**
+각 단락마다 마크다운과 아이콘을 활용하여 시인성을 제공합니다.
+아래 순서에 맞추어 답변 출력을 제공합니다.
+- $국가 정보 분석
+- 국기: flag_download_url:  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
+- 위치: map_download_url:  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다.
+---
+- 경제현황
+---
+- 사건 사고 유형 및 대처방안
+- 유의해야 할 지역
+- 주요 피해 사례 요약
+---
+- 자연재해
+---
+- 위험지도: dang_map_download_url: <img> 태그를 이용하여 이미지를 직접 렌더링 합니다.
+
+```
+<br> 
+<img width="936" height="612" alt="image" src="https://github.com/user-attachments/assets/0acc550e-1826-44fe-9ee7-813cca68ce2e" />
+<br> <br> 
+지침을 모두 입력하였다면 아래 프롬프트를 통해 원하는 포멧에 맞추어 답변을 하는지 확인해 봅니다.
+```
+프랑스에 대해 분석해줘
+```
+
+<img width="1515" height="1231" alt="image" src="https://github.com/user-attachments/assets/586a7d30-9f1f-4195-9efb-efc0c0c61393" />
+
+<br> <br> <br>
 
 ---
 
