Update 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md

--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -72,7 +72,7 @@ Copilot Studio에서 **커넥터**는 외부 시스템과 통신하기 위한 **
 그럼 지금부터 실습을 시작해 보도록 합니다. 이번 세션에서 활용할 공공데이터 포털 API 인증키 정보 입니다.
 ### <br> 🏆🏆**API Key 정보**🏆🏆 <br> 
 ```
-🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆TBD🏆
+480d3a4a42627d1dd841f68e92d9e6758918a7d0b0d2e1a1212eb7c491e72168
 ```
 
 먼저 **[도구]** 섹션에서 **[+도구 추가]** 를 클릭합니다.
@@ -132,13 +132,14 @@ API키를 직접 입력토록 합니다.
 <br>
 
 다음은 요청에서 **[+ 샘플에서 가져오기]** 를 선택하여 API 호출 쿼리를 지정합니다.
-이곳에서는 실제 API가 호출될 때의 URL정보를 입려하여 API Endpoint, 쿼리를 직접 선언하지 않더라도 자동으로 파싱하여 빠르게 커넥터를 생성할 수 있도록 만들어 줍니다.
+이곳에서는 실제 API가 호출될 때의 URL정보를 입력하여 API Endpoint, 쿼리를 직접 선언하지 않더라도 자동으로 파싱하여 빠르게 커넥터를 생성할 수 있도록 만들어 줍니다.
 <img width="723" height="155" alt="image" src="https://github.com/user-attachments/assets/1d56a006-c977-4b11-ac30-c9b274b4a858" />
 
 <br> <br>
 좌측 패널에 다음의 값을 입력하고 [가져오기] 를 선택합니다.
 - **동사**: **Get**
 - **URL**: 아래 정보를 붙여넣습니다. (헤더는 공란으로 유지합니다.)
+
 ```
 https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?serviceKey=########API Key######&numOfRows=10&pageNo=1&cond[country_iso_alp2::EQ]=US
 ```
@@ -147,7 +148,7 @@ https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?ser
 <br> <br>
 
 다음은 Request 쿼리의 정보를 수정합니다.<br>
-해당 정보는 Copilot studio 에서 도구의 Input으로 관리할 수도 있으나, 편의를 위해 Power apps 아래와 같이 설정합니다.<br>
+해당 정보는 Copilot studio 에서 도구의 Input으로 관리할 수도 있으나, 편의를 위해 Power apps 아래와 같이 설정합니다. <br>
 > ⚠️⚠️ **별도 언급이 없는 데이터는 기본 설정,값 그대로 유지합니다.** ⚠️⚠️
 
 |쿼리|기본값|필요여부|표시여부|
@@ -156,6 +157,7 @@ https://apis.data.go.kr/1262000/OverviewEconomicService/OverviewEconomicList?ser
 |numOfRows|10|예|Internal|
 |PageNo|1|예|Internal|
 |cond[country_iso_alp2::EQ]|공란유지|아니요|none or important|
+
 <br> <br> 
 설정하려는 쿼리를 클리하면 각 쿼리의 변수 설정창으로 이동하게 됩니다. 
 <img width="845" height="759" alt="image" src="https://github.com/user-attachments/assets/327e9c67-71e1-4212-bbad-27b42cf12508" />
