--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -242,7 +242,7 @@ https://apis.data.go.kr/1262000/CountryAccidentService2/CountryAccidentService2
 
 |쿼리|기본값|필요여부|표시여부|
 |-|-|-|-|
-|serviceKey| [API Key](https://github.com/chichoi1991/Copilot_Agent/edit/main/%EC%BB%A4%EC%8A%A4%ED%85%80%EC%97%94%EC%A7%84%20%EC%97%90%EC%9D%B4%EC%A0%84%ED%8A%B8%20%EC%8B%A4%EC%8A%B5/3.%203.%20%EC%BB%A4%EC%8A%A4%ED%85%80%20%EC%BB%A4%EB%84%A5%ED%84%B0%EB%A5%BC%20%EC%9D%B4%EC%9A%A9%ED%95%9C%20%EC%99%B8%EB%B6%80%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%A1%B0%ED%9A%8C.md#-api-key-%EC%A0%95%EB%B3%B4-)를 입력합니다.|예|Internal|
+|serviceKey| [API Key](https://github.com/chichoi1991/Copilot_Agent/blob/main/%EC%BB%A4%EC%8A%A4%ED%85%80%EC%97%94%EC%A7%84%20%EC%97%90%EC%9D%B4%EC%A0%84%ED%8A%B8%20%EC%8B%A4%EC%8A%B5/3.%20%EC%BB%A4%EC%8A%A4%ED%85%80%20%EC%BB%A4%EB%84%A5%ED%84%B0%EB%A5%BC%20%EC%9D%B4%EC%9A%A9%ED%95%9C%20%EC%99%B8%EB%B6%80%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%A1%B0%ED%9A%8C.md#6-%EC%8B%A4%EC%8A%B5---%EC%BB%A4%EC%8A%A4%ED%85%80-%EC%BB%A4%EB%84%A5%ED%84%B0-%EC%83%9D%EC%84%B1) 를 입력합니다.|예|Internal|
 |returnType|Json|예|Internal|
 |numOfRows|10|예|Internal|
 |PageNo|1|예|Internal|
