Update 6. 트리거를 통해 자동화 에이전트 기능 추가.md

--- a/커스텀엔진 에이전트 실습/6. 트리거를 통해 자동화 에이전트 기능 추가.md
+++ b/커스텀엔진 에이전트 실습/6. 트리거를 통해 자동화 에이전트 기능 추가.md
@@ -1,5 +1,103 @@
 # 📡 트리거를 통한 자동화 에이전트 구현
-이번 세션은 에이전트 구성의 마지막으로, 트리거를 통해 사용자가 Copilot, Teams를 통해 직접 Agent와 소통하지 않더라도 주어진 조건에 따라 Agent가 자율적으로 활동하는 자율형 에이전트를 구현해 보도록 하겠습니다.
+이번 세션은 에이전트 구성의 마지막으로, 트리거를 통해 사용자가 Copilot, Teams를 통해 직접 Agent와 소통하지 
+않더라도 주어진 조건에 따라 Agent가 자율적으로 활동하는 자율형 에이전트를 구현해 보도록 하겠습니다.
 
-## 1. 커넥터(Connector)란?
+또한 단순 자동화 Agent를 구현하는 것이 아닌, Microsoft 365에서 제공하는 다양한 서비스를 연동하여
+보다 손쉽게 다양한 임직원들이 AI 서비스를 이용할 수 있는 인터페이스를 다각화 시켜봅니다.
 
+
+<img width="2559" height="913" alt="image" src="https://github.com/user-attachments/assets/dff5c7ce-f5ab-40d2-8b92-fa00627fff5a" />
+> 별도의 개발없이 사용자들이 폼즈를 통해 데이터를 입력할 경우, 입력한 값을 쉐어포인트 List에 테이블 형태로 자동 저장
+<br> <br>
+<img width="985" height="1251" alt="image" src="https://github.com/user-attachments/assets/8ad070a9-047e-4d56-b79a-49410a0abe0d" />
+
+> 이후 List에 저장된 값을 기반으로 Agent는 해당 국가의 정보를 조회하고 분석된 내용을 메일을 전송하게 됩니다.
+
+
+## 실습
+> ⚠️⚠️**중요**⚠️⚠️ <br>
+> 쉐어포인트 사이트 및 리스트, 폼즈 생성은 모든 사용자가 개인별로 생성을 할 수 없기 때문에
+> 본 실습 과정에서는 생략을 하며, 생성 방법에 대해서는 참고할 수있도록 이곳에 명시해 둡니다.
+> 실제 실습은 생성된 사이트와 리스트 정보를 기반으로 실습을 진행합니다.
+> <br>  ⚠️⚠️**중요**⚠️⚠️ 
+
+쉐어포인트 사이트 소유자 및 구성원은 사이트에 List(목록) 을 생성하여 간략한 데이터 관리를 할 수 있습니다. 
+<img width="726" height="527" alt="image" src="https://github.com/user-attachments/assets/24a0accf-14e3-4c12-8e08-1e5c84519085" />
+
+이곳에서 "출장 정보 업데이트" 라는 리스트를 만들어 임직원들에게 출장 예정 정보를 받도록 합니다.
+<img width="1328" height="631" alt="image" src="https://github.com/user-attachments/assets/2b45bb64-e9a5-4429-9f26-ba813245bbb9" />
+<img width="1334" height="838" alt="image" src="https://github.com/user-attachments/assets/c0a56c56-984c-46eb-a79c-55edfcc89342" />
+
+리스트가 생성되면 [+열 추가]를 클릭하여 입력받을 데이터 필드를 생성하거나,
+상단의 **[Forms]** 를 선택하여 사용자가 사이트에 직접 접속하지 않더라도 Forms를 통해 입력할 수 있도록 인터페이스를 구현합니다.
+<img width="1239" height="369" alt="image" src="https://github.com/user-attachments/assets/67e4398f-8eb8-4fdf-ad9f-1c6fa9b600f0" />
+<img width="1451" height="879" alt="image" src="https://github.com/user-attachments/assets/cf9ef928-fb95-46e3-90b1-1c1b243ba5cc" />
+<img width="1272" height="790" alt="image" src="https://github.com/user-attachments/assets/37aaf985-3100-4f05-8fa9-55e5113dae30" />
+
+작성을 완료하고 링크를 복사하여 공유하면 테넌트 내의 사용자들은 해당 링크를 통해 자유롭게 정보를 입력하고, 입력된 정보를 쉐어포인트 사이트에 저장되게 됩니다.
+<img width="1133" height="557" alt="image" src="https://github.com/user-attachments/assets/3a177143-d515-4d8c-bddc-0721659929b5" />
+<img width="851" height="1024" alt="image" src="https://github.com/user-attachments/assets/c449152a-601f-4207-bd54-00b79228ddc1" />
+
+---
+
+쉐어포인트 리스트 설정을 마쳤으면, 다시 Copilot studio로 돌아가 트리거 설정을 합니다.
+
+에이전트 **[개요] **에서 하단으로 스크롤하여 **[트리거]** 섹션으로 이동하여 **[+트리거 추가]** 를 선택합니다.
+<img width="911" height="452" alt="image" src="https://github.com/user-attachments/assets/159ee187-9cce-45f3-aad5-c9249f7c9a1b" />
+
+이후 트리거 목록 중, Sharepoint의 **[항목이 만들어진 경우]** 를 선택합니다.
+<img width="1227" height="1100" alt="image" src="https://github.com/user-attachments/assets/0adbf8d6-1485-4861-b1aa-b7933e18a25f" />
+> 항목이 만들어진 경우는 리스트의 내용이 업데이트 되었을 때가 트리거가 됩니다. <br>
+
+> 사이트의 파일이 생성되었을 때를 트리거로 하고싶을 때는 파일이 만들어지는 경우를 선택합니다. <br> 
+
+위 트리거 이외에도 **[모두]** 를 선택하면 3rd Party 커넥터를 포함하며 다양한 트리거를 선택할 수 있습니다.
+<img width="1053" height="1012" alt="image" src="https://github.com/user-attachments/assets/188067e1-8ef9-4054-ae26-dfc9bf517641" />
+
+ **[항목이 만들어진 경우]** 를 선택하고 나면 트리거 이름과 인증 정보를 확인하게 됩니다.
+ 정상적으로 로그인이 되었다면 [다음] 으로 이동합니다.
+<img width="1098" height="1051" alt="image" src="https://github.com/user-attachments/assets/216f77cf-b26f-40f1-abea-fc5c31d62f43" />
+
+다음으로 트리거를 위한 리스트의 위치 및 지침을 입력합니다.
+**사이트와 리스트 정보는 앞서 로그인한 계정이 접근할 수 있는 사이트만 조회 및 이용이 가능합니다.**
+<img width="1101" height="457" alt="image" src="https://github.com/user-attachments/assets/f5e0e189-42f3-4776-a7a9-45c0fd87e1af" />
+
+**[이 트리거에 의해 호출될 때 에이전트에 대한 추가 지침]** 은, 트리거가 실행되면서 트리거에 포함된 데이터와 함께 에이전트가 어떤 작업을 실행한지에 대한 프롬프트를 사전 입력해주는 필드 입니다.
+
+우리는 리스트에 나와있는 email, 출장 국가 정보를 기반으로 국가 분석을 하고, 지정된 규칙에 맞추어 email을 발송할 것이기에 이와 관련된 지침을 붙여넣고 **[트리거 생성]** 을 합니다.
+
+```
+아래 **참고 데이터**에 나열된 출장지 정보를 기반으로 해당 국가 정보를 분석하고, 메일 작성 규칙과 포멧에 따라 email 값에 입력된 주소로 메일을 발송합니다.  
+
+#메일 작성 규칙
+ 메일 작성시에는 다음의 규칙을 따릅니다.
+ - 반드시 HTML형식으로 작성합니다.
+- 각 단락마다 마크다운과 아이콘을 활용하여 시인성을 제공합니다.
+- 이미지인 flag_download_url, map_download_url, dang_map_download_url의 경우 가시성을 확보하기 위해 <img>태그와 Style을 이용하여 max-width: 100%, height: auto, borderRadius: '8p' 을 적용시켜서 렌더링 합니다.
+ - 제목(Subject): ["출장 국가"] 사전 출장 정보 알림
+ - 수신자(to): $email
+ - 본문(subject) {
+ - $displayname 에게 인사와 출장 목적에 대해 격려를 하는 메세지를 먼저 전달.
+ 방문 국가에 대한 정보를 서술
+ - 국기: 
+flag_download_url
+ :  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
+ - 국가정보
+ - 위치: 
+map_download_url
+ :  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다.
+ - 경제현황
+ - 자연 재해
+ - 사건 사고 유형 및 대처방안:
+ - 유의해야 할 지역
+ - 주요 피해 사례 요약
+- 위험지도: 
+ dang_map_download_url 
+: <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
+ - 요약:  정리된 내용을 요약하고 여행의 안녕을 기원하는 메세지를 작성합니다.
+}
+
+참고 데이터: @{triggerBody()}
+```
+
+<img width="1339" height="1148" alt="image" src="https://github.com/user-attachments/assets/646312a0-9558-425b-90f2-01ecdee6977d" />
