Update 6. 트리거를 통해 자동화 에이전트 기능 추가.md

--- a/커스텀엔진 에이전트 실습/6. 트리거를 통해 자동화 에이전트 기능 추가.md
+++ b/커스텀엔진 에이전트 실습/6. 트리거를 통해 자동화 에이전트 기능 추가.md
@@ -101,3 +101,23 @@ map_download_url
 ```
 
 <img width="1339" height="1148" alt="image" src="https://github.com/user-attachments/assets/646312a0-9558-425b-90f2-01ecdee6977d" />
+
+트리거가 추가되면 폼즈 또는 리스트를 통해 실제로 통작을 하는지 화인할 수 있습니다.
+<img width="837" height="175" alt="image" src="https://github.com/user-attachments/assets/c640abef-d22d-4ce8-84fb-a24ca12ebbc2" />
+<img width="931" height="328" alt="image" src="https://github.com/user-attachments/assets/8902695d-2aac-49d9-9d01-1df4d5c1e2be" />
+<img width="748" height="348" alt="image" src="https://github.com/user-attachments/assets/8188165f-68b5-46e8-8582-c41e3a6a6d98" />
+
+> 에이전트가 게시되기 전까지는 트리거가 발동하더라도 실제 동작을 하지 않습니다. <br>
+> 실제 동작 확인이 필요하다면, 활성화된 트리거를 선택하고 [테스트 시작]를 선택합니다.
+
+<img width="748" height="348" alt="image" src="https://github.com/user-attachments/assets/754b2f53-835a-40ef-b629-1aa452b111b0" />
+<img width="1374" height="837" alt="image" src="https://github.com/user-attachments/assets/8006e09c-91f3-4261-bfcd-65f629855bcd" />
+
+이러한 에이전트의 동작은 [활동] 을 통해서도 확인할 수 있습니다.
+<img width="893" height="814" alt="image" src="https://github.com/user-attachments/assets/892eba59-63c4-4fd8-98a2-0585fd19dd54" />
+
+---
+
+
+🎉🎉축하합니다🎉🎉 이번 세션을 완료하였습니다. <br>
+다음 세션에서는 실제로 에이전트를 게시하여 Teams, Microsoft 365 Copilot app 또는 외부 다양한 채널을 통해 에이전트를 실제 이용해 볼수 있도록 합니다.
