Update 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md

--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -179,6 +179,11 @@ Response(응답) 영역에 있는 **[Default]** 를 클릭 합니다.
 <img width="1359" height="674" alt="image" src="https://github.com/user-attachments/assets/e31e2f19-b3fe-45a9-a424-bbde9d1e751a" />
 <br> <br>
 
+**API응답 샘플**
+```
+{"response":{"body":{"dataType":"JSON","items":{"item":[{"country_eng_nm":"Russia","country_iso_alp2":"RU","country_nm":"러시아","currency_unit":"루블(Ruble) / (US $1≒80루블)","export_amount":"419877000000","gdp":"2161200000000","gdp_desc":"('24, IMF)","gdp_growth_rate":"3.6","gdp_growth_rate_desc":"('24, IMF)","gdp_per_capita":"14794","gdp_per_capita_desc":"('24, IMF)","import_amount":"302843000000","inflation_rate":"7.8","inflation_rate_desc":"('24, IMF)","main_resource":"주요자원(’21, BP) : 석유(1,078억배럴, 6위), 가스(37.4조㎥, 1위), 석탄(1,621억톤, 2위), 금(7,500톤, 2위/USGS 기준), 우라늄(486천톤U, 4위/WNA 기준) 등","major_industry":null,"unemployment_desc":"('24, IMF)","unemployment_rate":"2.6"}]},"numOfRows":10,"pageNo":1,"totalCount":1},"header":{"resultCode":"0","resultMsg":"정상"}}}
+```
+
 가져오기가 완료되면 다음과 같이 본문의 Response 페이로드가 표시되며, 상단의** [<-뒤로]** 를 선택하여 본문으로 돌아옵니다.
 <img width="1341" height="789" alt="image" src="https://github.com/user-attachments/assets/1bdbd12d-9fc4-4ade-8536-c5a2981290f1" />
 <br> <br> 
