Update 4. MCP 커넥터 이용해보기.md

--- a/커스텀엔진 에이전트 실습/4. MCP 커넥터 이용해보기.md
+++ b/커스텀엔진 에이전트 실습/4. MCP 커넥터 이용해보기.md
@@ -90,71 +90,36 @@ MCP 서버가 제공하는 기능을 확인할 수 있습니다.
 ```
 #메일 포멧 샘플
 
-- 아래 메일 예제 포멧을 참조하여 메일을 작성합니다.
- 
-<html><body style="font-family: 'Segoe UI', Arial, sans-serif; color: #222; background: #f9f9f9; padding: 24px;">
-<div style="background: #fff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.07); padding: 32px; max-width: 800px; margin: auto;">
+아래 **참고 데이터**에 나열된 출장지 정보를 기반으로 해당 국가 정보를 분석하고, 메일 작성 규칙과 포멧에 따라 email 값에 입력된 주소로 메일을 발송합니다.  
 
-<h2 style="color: #2d6cdf;">✈️ 안녕하세요, Administrator- Chiwon Choi님!</h2>
-<p>이라크 중고차 시장조사 출장 준비를 진심으로 응원합니다. 안전하고 성공적인 출장 되시길 바랍니다.</p>
+#메일 작성 규칙
+ 메일 작성시에는 다음의 규칙을 따릅니다.
+ - 반드시 HTML형식으로 작성합니다.
+- 각 단락마다 마크다운과 아이콘을 활용하여 시인성을 제공합니다.
+- 이미지인 flag_download_url, map_download_url, dang_map_download_url의 경우 가시성을 확보하기 위해 <img>태그와 Style을 이용하여 max-width: 100%, height: auto, borderRadius: '8p' 을 적용시켜서 렌더링 합니다.
+ - 제목(Subject): ["출장 국가"] 사전 출장 정보 알림
+ - 수신자(to): $email
+ - 본문(subject) {
+ - $displayname 에게 인사와 출장 목적에 대해 격려를 하는 메세지를 먼저 전달.
+ 방문 국가에 대한 정보를 서술
+ - 국기: 
+flag_download_url
+ :  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
+ - 국가정보
+ - 위치: 
+map_download_url
+ :  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다.
+ - 경제현황
+ - 자연 재해
+ - 사건 사고 유형 및 대처방안:
+ - 유의해야 할 지역
+ - 주요 피해 사례 요약
+- 위험지도: 
+ dang_map_download_url 
+: <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
+ - 요약:  정리된 내용을 요약하고 여행의 안녕을 기원하는 메세지를 작성합니다.
+}
 
----
-
-<h3 style="color: #2d6cdf;">🇮🇶 국기</h3>
-<img src="https://opendata.mofa.go.kr:8444/fileDownload/images/country_images/flags/169/20241014_141212609.png" alt="이라크 국기" style="max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 16px;" />
-
-<h3 style="color: #2d6cdf;">🗺️ 국가정보</h3>
-<ul>
-  <li><strong>국가명:</strong> 이라크 (Iraq)</li>
-  <li><strong>ISO 코드:</strong> IQ</li>
-  <li><strong>대륙:</strong> 중동</li>
-  <li><strong>통화:</strong> 이라크 디나르 (Iraqi Dinar, ID) (1$=1,300 ID, 중앙은행 기준, '24.10월)</li>
-</ul>
-
-<h3 style="color: #2d6cdf;">🗺️ 위치</h3>
-<img src="https://opendata.mofa.go.kr:8444/fileDownload/images/country_images/maps/169/20220318_162732597.png" alt="이라크 지도" style="max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 16px;" />
-
-<h3 style="color: #2d6cdf;">💹 경제현황</h3>
-<ul>
-  <li><strong>GDP:</strong> 2,508억 달러 (2023, World Bank)</li>
-  <li><strong>1인당 GDP:</strong> 5,512달러 (2023, PPP 기준, World Bank)</li>
-  <li><strong>GDP 성장률:</strong> -2.9% (2023, World Bank)</li>
-  <li><strong>수출액:</strong> 1,151억 달러</li>
-  <li><strong>수입액:</strong> 950억 달러</li>
-</ul>
-
-<h3 style="color: #2d6cdf;">🌪️ 자연 재해</h3>
-<ul>
-  <li>봄철 모래바람이 심할 수 있으니, 마스크 등 적절한 대비가 필요합니다.</li>
-  <li>7~9월에는 낮 최고기온이 50도에 육박하는 날이 많으니, 외부 활동을 삼가고 충분한 수분 섭취와 휴식을 권장합니다.</li>
-  <li>배수시설이 미비하여 강우량이 많지 않아도 도로 및 주택 침수 위험이 있습니다. 특히 북부 산악지대나 이란 국경지역의 강 주변은 홍수 위험이 있으니 주의 바랍니다.</li>
-</ul>
-
-<h3 style="color: #2d6cdf;">🚨 사건 사고 유형 및 대처방안</h3>
-<ul>
-  <li>ISIS 등 테러 조직의 잔당이 도심지에 잠복하거나, 사병 또는 폭격 등으로 위협이 지속되고 있습니다. 현지 치안 및 안전 정보는 대사관 홈페이지 등에서 최신 정보를 확인하시기 바랍니다.</li>
-  <li>강력범죄(납치, 강도, 암살 등)가 빈번하므로, 현지인도 무장 경호를 고용하는 등 신변안전에 각별히 유의해야 합니다.</li>
-  <li>외부 출타 시에는 반드시 무장 경호원을 동행하고, 방탄 차량을 이용하는 등 신변안전에 만전을 기해야 합니다.</li>
-  <li>여행금지 국가로 지정되어 있으므로, 예외적으로 입국 시에는 예외적 여권 사용 허가가 필요합니다. 반드시 대사관 또는 현지 기관의 안내를 참고하시기 바랍니다.</li>
-  <li>현금이나 몸값을 노린 납치 사건이 발생할 수 있으니, 납치 시에는 즉시 대사관에 연락하여 도움을 요청해야 합니다.</li>
-  <li>야간 운전 및 비포장도로 운전은 위험하니, 현지 운전원 및 경호원과 동행을 권장합니다.</li>
-</ul>
-
-<h3 style="color: #2d6cdf;">📍 유의해야 할 지역</h3>
-<ul>
-  <li>이라크 내 모든 지역에서 신변안전에 유의해야 하나, 특히 Nineveh, Diyala, Salahuddin, Kirkuk, Anbar 주 및 바그다드 외곽지역 등은 IS 잔당의 테러공격이 빈번하니 절대 방문을 삼가시기 바랍니다.</li>
-  <li>모스크, 시장, 정부기관 등 사람이 많이 모이는 곳에서는 불특정 다수를 상대로 한 자살폭탄 테러가 빈번하니 접근을 삼가시기 바랍니다.</li>
-</ul>
-
-<h3 style="color: #2d6cdf;">📝 주요 피해 사례 요약</h3>
-<ul>
-  <li>IS 잔당의 소규모 테러공격, 강력범죄(납치, 강도, 암살), 야간 및 비포장도로 교통사고, 외국인 근로자 대상 부적절한 합의 미이행 등 다양한 피해 사례가 보고되고 있습니다.</li>
-</ul>
-
-<h3 style="color: #2d6cdf;">🗺️ 위험지도</h3>
-<img src="https://www.0404.go.kr/files/download/COUNTRY_174/3" alt="이라크 위험지도" style="max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 16px;" />
-
----
 ```
 > Outlook 커넥터 또는 MCP 서버에서 메일을 보낼 때는 HTML 형식을 이용합니다.
 지침에 HTML 형식으로 작성 또는 HTML 샘플을 포함하여 작성하도록 지침을 만들어 둘 경우, 메일의 레이아웃, 줄간격, 강조 등의 메일 시인성을 높일 수 있습니다.
