Update 2. 사내 데이터(쉐어포인트) 연결하기.md

--- a/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
+++ b/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
@@ -84,7 +84,7 @@ https://m365cpi45255191.sharepoint.com/sites/CopilotAgentPoC/Shared%20Documents/
 ```
 - 설명
 ```
-전세계 국가에 대한 공식 코드 정보가 기술되어 있습니다.  영문 이름(country_eng_nm) 한글 이름(country_iso_alp2), 2자리 iso 기호(country_iso_alp2), 3자리 iso 기호(iso_alp3), iso 번호(iso_num) 의 정보가 있습니다.
+전세계 국가에 대한 ISO 코드 정보가 기술되어 있습니다.  영문 이름(country_eng_nm) 한글 이름(country_iso_alp2), 2자리 iso 기호(country_iso_alp2), 3자리 iso 기호(iso_alp3), iso 번호(iso_num) 의 정보가 있습니다.
 ```
 <br><br> 
 <img width="1096" height="784" alt="image" src="https://github.com/user-attachments/assets/af0cfe2c-7316-426c-b142-0f0f854d3ddd" />
